--- a/site/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.ipynb
+++ b/site/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a9d0996f",
+   "id": "821a881e",
    "metadata": {},
    "source": [
     "# ValidMind for model validation 1 — Set up the ValidMind Library for validation\n",
@@ -18,30 +18,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c747db34",
+   "id": "19ea797c",
    "metadata": {},
    "source": [
     "::: {.content-hidden when-format=\"html\"}\n",
     "## Contents    \n",
-    "- [Introduction](#toc1_)    \n",
-    "- [About ValidMind](#toc2_)    \n",
-    "  - [Before you begin](#toc2_1_)    \n",
-    "  - [New to ValidMind?](#toc2_2_)    \n",
-    "  - [Key concepts](#toc2_3_)    \n",
-    "- [Setting up](#toc3_)    \n",
-    "  - [Register a sample model](#toc3_1_)    \n",
-    "    - [Assign validator credentials](#toc3_1_1_)    \n",
-    "  - [Install the ValidMind Library](#toc3_2_)    \n",
-    "  - [Initialize the ValidMind Library](#toc3_3_)    \n",
-    "    - [Get your code snippet](#toc3_3_1_)    \n",
-    "- [Getting to know ValidMind](#toc4_)    \n",
-    "  - [Preview the validation report template](#toc4_1_)    \n",
-    "    - [View validation report in the ValidMind Platform](#toc4_1_1_)    \n",
-    "  - [Explore available tests](#toc4_2_)    \n",
-    "- [Upgrade ValidMind](#toc5_)    \n",
-    "- [In summary](#toc6_)    \n",
-    "- [Next steps](#toc7_)    \n",
-    "  - [Start the model validation process](#toc7_1_)    \n",
+    "- [Introduction](#toc1__)    \n",
+    "- [About ValidMind](#toc2__)    \n",
+    "  - [Before you begin](#toc2_1__)    \n",
+    "  - [New to ValidMind?](#toc2_2__)    \n",
+    "  - [Key concepts](#toc2_3__)    \n",
+    "- [Setting up](#toc3__)    \n",
+    "  - [Register a sample model](#toc3_1__)    \n",
+    "    - [Assign validator credentials](#toc3_1_1__)    \n",
+    "    - [Apply documentation template](#toc3_1_2__)    \n",
+    "    - [Apply validation report template](#toc3_1_3__)    \n",
+    "  - [Install the ValidMind Library](#toc3_2__)    \n",
+    "  - [Initialize the ValidMind Library](#toc3_3__)    \n",
+    "    - [Get your code snippet](#toc3_3_1__)    \n",
+    "- [Getting to know ValidMind](#toc4__)    \n",
+    "  - [Preview the validation report template](#toc4_1__)    \n",
+    "    - [View validation report in the ValidMind Platform](#toc4_1_1__)    \n",
+    "  - [Explore available tests](#toc4_2__)    \n",
+    "- [Upgrade ValidMind](#toc5__)    \n",
+    "- [In summary](#toc6__)    \n",
+    "- [Next steps](#toc7__)    \n",
+    "  - [Start the model validation process](#toc7_1__)    \n",
     "\n",
     ":::\n",
     "<!-- jn-toc-notebook-config\n",
@@ -56,10 +58,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d4715f",
+   "id": "d624f88d",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -73,10 +75,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14c2d80d",
+   "id": "4fb1ef5a",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
@@ -87,10 +89,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "151a4ca5",
+   "id": "594f9fd4",
    "metadata": {},
    "source": [
-    "<a id='toc2_1_'></a>\n",
+    "<a id='toc2_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -101,10 +103,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "089c960e",
+   "id": "262ed111",
    "metadata": {},
    "source": [
-    "<a id='toc2_2_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -117,10 +119,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f307177",
+   "id": "0eb67fe9",
    "metadata": {},
    "source": [
-    "<a id='toc2_3_'></a>\n",
+    "<a id='toc2_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -148,47 +150,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c42665b8",
+   "id": "e0e1cf3d",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## Setting up"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0faed42c",
+   "id": "609fe59b",
    "metadata": {},
    "source": [
-    "<a id='toc3_1_'></a>\n",
+    "<a id='toc3_1__'></a>\n",
     "\n",
     "### Register a sample model\n",
     "\n",
     "In a usual model lifecycle, a champion model will have been independently registered in your model inventory and submitted to you for validation by your model development team as part of the effective challenge process. (**Learn more:** [Submit for approval](https://docs.validmind.ai/guide/model-documentation/submit-for-approval.html))\n",
     "\n",
-    "For this series of notebooks, we'll have you register a dummy model in the ValidMind Platform inventory and assign yourself as the validator to familiarize you with the ValidMind interface and circumvent the need for an existing model:\n",
+    "For this notebook, we'll have you register a dummy model in the ValidMind Platform inventory and assign yourself as the validator to familiarize you with the ValidMind interface and circumvent the need for an existing model:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
     "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
     "\n",
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down — don’t worry, we’ll adjust these permissions next for validation.\n",
     "\n",
-    "    You can fill in other options according to your preference."
+    "5. Click **Register Model** to add the model to your inventory."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0c350e0d",
+   "id": "58e552bb",
    "metadata": {},
    "source": [
-    "<a id='toc3_1_1_'></a>\n",
+    "<a id='toc3_1_1__'></a>\n",
     "\n",
     "#### Assign validator credentials\n",
     "\n",
@@ -215,9 +216,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84251589",
    "metadata": {},
    "source": [
-    "<a id='toc3_2_'></a>\n",
+    "<a id='toc3_1_2__'></a>\n",
+    "\n",
+    "#### Apply documentation template\n",
+    "\n",
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier for developers.\n",
+    "\n",
+    "We'll need this documentation template later for reference as we draft our validation report:\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdfb5dc5",
+   "metadata": {},
+   "source": [
+    "<a id='toc3_1_3__'></a>\n",
+    "\n",
+    "#### Apply validation report template\n",
+    "\n",
+    "Next, let's select a validation report template. A template predefines sections for your report and provides a general outline to follow, making the validation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Generic Validation Report`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f656d0d6",
+   "metadata": {},
+   "source": [
+    "<a id='toc3_2__'></a>\n",
     "\n",
     "### Install the ValidMind Library\n",
     "\n",
@@ -240,10 +280,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec7fcb7",
+   "id": "1435fd5b",
    "metadata": {},
    "source": [
-    "<a id='toc3_3_'></a>\n",
+    "<a id='toc3_3__'></a>\n",
     "\n",
     "### Initialize the ValidMind Library\n",
     "\n",
@@ -252,9 +292,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b375b341",
    "metadata": {},
    "source": [
-    "<a id='toc3_3_1_'></a>\n",
+    "<a id='toc3_3_1__'></a>\n",
     "\n",
     "#### Get your code snippet\n",
     "\n",
@@ -293,19 +334,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4b5a00f",
+   "id": "331e1c07",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Getting to know ValidMind"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "f6331a98",
    "metadata": {},
    "source": [
-    "<a id='toc4_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Preview the validation report template\n",
     "\n",
@@ -326,10 +368,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2e86bc8",
+   "id": "20717133",
    "metadata": {},
    "source": [
-    "<a id='toc4_1_1_'></a>\n",
+    "<a id='toc4_1_1__'></a>\n",
     "\n",
     "#### View validation report in the ValidMind Platform\n",
     "\n",
@@ -350,9 +392,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f5d0aaab",
    "metadata": {},
    "source": [
-    "<a id='toc4_2_'></a>\n",
+    "<a id='toc4_2__'></a>\n",
     "\n",
     "### Explore available tests\n",
     "\n",
@@ -371,9 +414,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dce47e40",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
@@ -394,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "upgrade-version-d64591ca-3073-4b3e-9586-d3577adda203",
+   "id": "7a0c3cc2",
    "metadata": {},
    "source": [
     "If the version returned is lower than the version indicated in our [production open-source code](https://github.com/validmind/validmind-library/blob/prod/validmind/__version__.py), restart your notebook and run:\n",
@@ -406,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44657dea",
+   "id": "2dac11d5",
    "metadata": {},
    "source": [
     "You may need to restart your kernel after running the upgrade package for changes to be applied."
@@ -414,10 +458,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39f45f58",
+   "id": "174d2c8d",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## In summary\n",
     "\n",
@@ -426,18 +470,19 @@
     "- [x] Register a model within the ValidMind Platform and assign yourself as the validator\n",
     "- [x] Install and initialize the ValidMind Library\n",
     "- [x] Preview the validation report template for your model\n",
-    "- [x] Explore the available tests offered by the ValidMind Library\n"
+    "- [x] Explore the available tests offered by the ValidMind Library"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d8ffdcf7",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
-    "<a id='toc7_1_'></a>\n",
+    "<a id='toc7_1__'></a>\n",
     "\n",
     "### Start the model validation process\n",
     "\n",
