--- a/site/notebooks/code_samples/credit_risk/document_excel_application_scorecard.ipynb
+++ b/site/notebooks/code_samples/credit_risk/document_excel_application_scorecard.ipynb
@@ -27,25 +27,27 @@
     "- [Setting up](#toc2__)    \n",
     "  - [Install the ValidMind Library](#toc2_1__)    \n",
     "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
-    "    - [Get your code snippet](#toc2_2_1__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
     "  - [Initialize the Python environment](#toc2_3__)    \n",
-    "- [Preview the documentation template](#toc3__)    \n",
-    "- [Load the sample datasets](#toc4__)    \n",
-    "  - [Load the raw dataset](#toc4_1__)    \n",
-    "  - [Load the preprocessed dataset](#toc4_2__)    \n",
-    "  - [Load the training and test datasets](#toc4_3__)    \n",
-    "- [Initialize the ValidMind datasets](#toc5__)    \n",
-    "- [Initialize a model object](#toc6__)    \n",
-    "  - [Link predictions](#toc6_1__)    \n",
-    "- [Running tests](#toc7__)    \n",
-    "  - [Enable custom context for test descriptions](#toc7_1__)    \n",
-    "  - [Define tests to run](#toc7_2__)    \n",
-    "  - [Run defined tests](#toc7_3__)    \n",
-    "- [Next steps](#toc8__)    \n",
-    "  - [Work with your model documentation](#toc8_1__)    \n",
-    "    - [Add individual test results to documentation](#toc8_1_1__)    \n",
-    "  - [Discover more learning resources](#toc8_2__)    \n",
-    "- [Upgrade ValidMind](#toc9__)    \n",
+    "  - [Preview the documentation template](#toc2_4__)    \n",
+    "- [Load the sample datasets](#toc3__)    \n",
+    "  - [Load the raw dataset](#toc3_1__)    \n",
+    "  - [Load the preprocessed dataset](#toc3_2__)    \n",
+    "  - [Load the training and test datasets](#toc3_3__)    \n",
+    "- [Initialize the ValidMind datasets](#toc4__)    \n",
+    "- [Initialize a model object](#toc5__)    \n",
+    "  - [Link predictions](#toc5_1__)    \n",
+    "- [Running tests](#toc6__)    \n",
+    "  - [Enable custom context for test descriptions](#toc6_1__)    \n",
+    "  - [Define tests to run](#toc6_2__)    \n",
+    "  - [Run defined tests](#toc6_3__)    \n",
+    "- [Next steps](#toc7__)    \n",
+    "  - [Work with your model documentation](#toc7_1__)    \n",
+    "    - [Add individual test results to documentation](#toc7_1_1__)    \n",
+    "  - [Discover more learning resources](#toc7_2__)    \n",
+    "- [Upgrade ValidMind](#toc8__)    \n",
     "\n",
     ":::\n",
     "<!-- jn-toc-notebook-config\n",
@@ -158,30 +160,61 @@
    "source": [
     "<a id='toc2_2__'></a>\n",
     "\n",
-    "### Initialize the ValidMind Library\n",
-    "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
-    "\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "#### Get your code snippet\n",
+    "#### Register sample model\n",
+    "\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Credit Risk - CECL`\n",
     "\n",
-    "   - Documentation template: `Credit Risk Scorecard`\n",
-    "   - Use case: `Credit Risk - CECL`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Credit Risk Scorecard`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -239,11 +272,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3__'></a>\n",
+    "<a id='toc2_4__'></a>\n",
     "\n",
-    "## Preview the documentation template\n",
+    "### Preview the documentation template\n",
     "\n",
-    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model.\n",
     "\n",
     "You will upload documentation and test results unique to your model based on this template later on. For now, **take a look at the default structure that the template provides with [the `vm.preview_template()` function](https://docs.validmind.ai/validmind/validmind.html#preview_template)** from the ValidMind library and note the empty sections:"
    ]
@@ -261,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4__'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## Load the sample datasets\n",
     "\n",
@@ -277,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_1__'></a>\n",
+    "<a id='toc3_1__'></a>\n",
     "\n",
     "### Load the raw dataset\n",
     "\n",
@@ -299,7 +332,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_2__'></a>\n",
+    "<a id='toc3_2__'></a>\n",
     "\n",
     "### Load the preprocessed dataset\n",
     "\n",
@@ -320,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_3__'></a>\n",
+    "<a id='toc3_3__'></a>\n",
     "\n",
     "### Load the training and test datasets\n",
     "\n",
@@ -341,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5__'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Initialize the ValidMind datasets\n",
     "\n",
@@ -393,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6__'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Initialize a model object\n",
     "\n",
@@ -422,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1__'></a>\n",
+    "<a id='toc5_1__'></a>\n",
     "\n",
     "### Link predictions\n",
     "\n",
@@ -445,7 +478,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7__'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Running tests\n",
     "\n",
@@ -462,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_1__'></a>\n",
+    "<a id='toc6_1__'></a>\n",
     "\n",
     "### Enable custom context for test descriptions\n",
     "\n",
@@ -544,7 +577,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_2__'></a>\n",
+    "<a id='toc6_2__'></a>\n",
     "\n",
     "### Define tests to run\n",
     "\n",
@@ -773,7 +806,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_3__'></a>\n",
+    "<a id='toc6_3__'></a>\n",
     "\n",
     "### Run defined tests\n",
     "\n",
@@ -839,13 +872,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8__'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
     "You can look at the results of this test suite right in the notebook where you ran the code, as you would expect. But there is a better way, use the ValidMind Platform to work with your model documentation.\n",
     "\n",
-    "<a id='toc8_1__'></a>\n",
+    "<a id='toc7_1__'></a>\n",
     "\n",
     "### Work with your model documentation\n",
     "\n",
@@ -857,7 +890,7 @@
     "\n",
     "3. Expand the following section to review tests automatically inserted into your documentation template: **2.3. Feature Selection and Engineering**\n",
     "\n",
-    "<a id='toc8_1_1__'></a>\n",
+    "<a id='toc7_1_1__'></a>\n",
     "\n",
     "#### Add individual test results to documentation\n",
     "\n",
@@ -880,7 +913,7 @@
     "\n",
     "    Confirm that the individual results for the high correlation test has been correctly inserted into section **2.3. Correlations and Interactions** of the documentation.\n",
     "\n",
-    "<a id='toc8_2__'></a>\n",
+    "<a id='toc7_2__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -896,7 +929,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9__'></a>\n",
+    "<a id='toc8__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
@@ -935,9 +968,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ValidMind Library",
    "language": "python",
-   "name": "python3"
+   "name": "validmind"
   },
   "language_info": {
    "codemirror_mode": {
@@ -949,7 +982,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
