--- a/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
+++ b/site/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb
@@ -27,53 +27,54 @@
    "source": [
     "::: {.content-hidden when-format=\"html\"}\n",
     "## Contents    \n",
-    "- [About ValidMind](#toc1_)    \n",
-    "  - [Before you begin](#toc1_1_)    \n",
-    "  - [New to ValidMind?](#toc1_2_)    \n",
-    "  - [Key concepts](#toc1_3_)    \n",
-    "- [Setting up](#toc2_)    \n",
-    "  - [Register a sample model](#toc2_1_)    \n",
-    "    - [Assign validator credentials](#toc2_1_1_)    \n",
-    "  - [Install the ValidMind Library](#toc2_2_)    \n",
-    "  - [Initialize the ValidMind Library](#toc2_3_)    \n",
-    "    - [Get your code snippet](#toc2_3_1_)    \n",
-    "  - [Importing the champion model](#toc2_4_)    \n",
-    "  - [Load the sample dataset](#toc2_5_)    \n",
-    "    - [Preprocess the dataset](#toc2_5_1_)    \n",
-    "    - [Apply feature engineering to the dataset](#toc2_5_2_)    \n",
-    "  - [Split the feature engineered dataset](#toc2_6_)    \n",
-    "- [Developing potential challenger models](#toc3_)    \n",
-    "  - [Train potential challenger models](#toc3_1_)    \n",
-    "    - [Random forest classification model](#toc3_1_1_)    \n",
-    "    - [Logistic regression model](#toc3_1_2_)    \n",
-    "  - [Extract predicted probabilities](#toc3_2_)    \n",
-    "    - [Compute binary predictions](#toc3_2_1_)    \n",
-    "- [Initializing the ValidMind objects](#toc4_)    \n",
-    "  - [Initialize the ValidMind datasets](#toc4_1_)    \n",
-    "  - [Initialize the model objects](#toc4_2_)    \n",
-    "  - [Assign predictions](#toc4_3_)    \n",
-    "  - [Compute credit risk scores](#toc4_4_)    \n",
-    "- [Run data quality tests](#toc5_)    \n",
-    "  - [Run and log an individual data quality test](#toc5_1_)    \n",
-    "  - [Log multiple data quality tests](#toc5_2_)    \n",
-    "  - [Run data quality comparison tests](#toc5_3_)    \n",
-    "- [Run performance tests](#toc6_)    \n",
-    "  - [Identify performance tests](#toc6_1_)    \n",
-    "  - [Run and log an individual performance test](#toc6_2_)    \n",
-    "  - [Log multiple performance tests](#toc6_3_)    \n",
-    "  - [Evaluate performance of the champion model](#toc6_4_)    \n",
-    "  - [Evaluate performance of challenger models](#toc6_5_)    \n",
-    "    - [Enable custom context for test descriptions](#toc6_5_1_)    \n",
-    "    - [Run performance comparison tests](#toc6_5_2_)    \n",
-    "- [Adjust a ValidMind test](#toc7_)    \n",
-    "- [Run diagnostic tests](#toc8_)    \n",
-    "- [Run feature importance tests](#toc9_)    \n",
-    "- [Implement a custom test](#toc10_)    \n",
-    "- [Verify test runs](#toc11_)    \n",
-    "- [Next steps](#toc12_)    \n",
-    "  - [Work with your validation report](#toc12_1_)    \n",
-    "  - [Discover more learning resources](#toc12_2_)    \n",
-    "- [Upgrade ValidMind](#toc13_)    \n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Register a sample model](#toc2_1__)    \n",
+    "    - [Assign validator credentials](#toc2_1_1__)    \n",
+    "    - [Apply validation report template](#toc2_1_2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_2__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_3__)    \n",
+    "    - [Get your code snippet](#toc2_3_1__)    \n",
+    "  - [Importing the champion model](#toc2_4__)    \n",
+    "  - [Load the sample dataset](#toc2_5__)    \n",
+    "    - [Preprocess the dataset](#toc2_5_1__)    \n",
+    "    - [Apply feature engineering to the dataset](#toc2_5_2__)    \n",
+    "  - [Split the feature engineered dataset](#toc2_6__)    \n",
+    "- [Developing potential challenger models](#toc3__)    \n",
+    "  - [Train potential challenger models](#toc3_1__)    \n",
+    "    - [Random forest classification model](#toc3_1_1__)    \n",
+    "    - [Logistic regression model](#toc3_1_2__)    \n",
+    "  - [Extract predicted probabilities](#toc3_2__)    \n",
+    "    - [Compute binary predictions](#toc3_2_1__)    \n",
+    "- [Initializing the ValidMind objects](#toc4__)    \n",
+    "  - [Initialize the ValidMind datasets](#toc4_1__)    \n",
+    "  - [Initialize the model objects](#toc4_2__)    \n",
+    "  - [Assign predictions](#toc4_3__)    \n",
+    "  - [Compute credit risk scores](#toc4_4__)    \n",
+    "- [Run data quality tests](#toc5__)    \n",
+    "  - [Run and log an individual data quality test](#toc5_1__)    \n",
+    "  - [Log multiple data quality tests](#toc5_2__)    \n",
+    "  - [Run data quality comparison tests](#toc5_3__)    \n",
+    "- [Run performance tests](#toc6__)    \n",
+    "  - [Identify performance tests](#toc6_1__)    \n",
+    "  - [Run and log an individual performance test](#toc6_2__)    \n",
+    "  - [Log multiple performance tests](#toc6_3__)    \n",
+    "  - [Evaluate performance of the champion model](#toc6_4__)    \n",
+    "  - [Evaluate performance of challenger models](#toc6_5__)    \n",
+    "    - [Enable custom context for test descriptions](#toc6_5_1__)    \n",
+    "    - [Run performance comparison tests](#toc6_5_2__)    \n",
+    "- [Adjust a ValidMind test](#toc7__)    \n",
+    "- [Run diagnostic tests](#toc8__)    \n",
+    "- [Run feature importance tests](#toc9__)    \n",
+    "- [Implement a custom test](#toc10__)    \n",
+    "- [Verify test runs](#toc11__)    \n",
+    "- [Next steps](#toc12__)    \n",
+    "  - [Work with your validation report](#toc12_1__)    \n",
+    "  - [Discover more learning resources](#toc12_2__)    \n",
+    "- [Upgrade ValidMind](#toc13__)    \n",
     "\n",
     ":::\n",
     "<!-- jn-toc-notebook-config\n",
@@ -90,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
@@ -103,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -116,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -131,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -161,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
     "## Setting up"
    ]
@@ -170,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_1_'></a>\n",
+    "<a id='toc2_1__'></a>\n",
     "\n",
     "### Register a sample model\n",
     "\n",
@@ -182,21 +183,20 @@
     "\n",
     "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Credit Risk — CECL`\n",
     "\n",
-    "    - Documentation template: `Credit Risk Scorecard`\n",
-    "    - Use case: `Credit Risk — CECL`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down — don’t worry, we’ll adjust these permissions next for validation.\n",
     "\n",
-    "    You can fill in other options according to your preference."
+    "5. Click **Register Model** to add the model to your inventory."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_1_1_'></a>\n",
+    "<a id='toc2_1_1__'></a>\n",
     "\n",
     "#### Assign validator credentials\n",
     "\n",
@@ -225,7 +225,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_2_'></a>\n",
+    "<a id='toc2_1_2__'></a>\n",
+    "\n",
+    "#### Apply validation report template\n",
+    "\n",
+    "Once you've registered your model, let's select a validation report template. A template predefines sections for your report and provides a general outline to follow, making the validation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Generic Validation Report`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2__'></a>\n",
     "\n",
     "### Install the ValidMind Library\n",
     "\n",
@@ -249,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_3_'></a>\n",
+    "<a id='toc2_3__'></a>\n",
     "\n",
     "### Initialize the ValidMind Library\n",
     "\n",
@@ -260,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_3_1_'></a>\n",
+    "<a id='toc2_3_1__'></a>\n",
     "\n",
     "#### Get your code snippet\n",
     "\n",
@@ -300,11 +317,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_4_'></a>\n",
+    "<a id='toc2_4__'></a>\n",
     "\n",
     "### Importing the champion model\n",
     "\n",
-    "With the ValidMind Library set up and ready to go, let's go ahead and import the champion model submitted by the model development team in the format of a `.pkl` file: **[xgb_model_champion.pkl](xgb_model_champion.pkl)**\n"
+    "With the ValidMind Library set up and ready to go, let's go ahead and import the champion model submitted by the model development team in the format of a `.pkl` file: **[xgb_model_champion.pkl](xgb_model_champion.pkl)**"
    ]
   },
   {
@@ -335,7 +352,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_5_'></a>\n",
+    "<a id='toc2_5__'></a>\n",
     "\n",
     "### Load the sample dataset\n",
     "\n",
@@ -363,7 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_5_1_'></a>\n",
+    "<a id='toc2_5_1__'></a>\n",
     "\n",
     "#### Preprocess the dataset\n",
     "\n",
@@ -388,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_5_2_'></a>\n",
+    "<a id='toc2_5_2__'></a>\n",
     "\n",
     "#### Apply feature engineering to the dataset\n",
     "\n",
@@ -414,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_6_'></a>\n",
+    "<a id='toc2_6__'></a>\n",
     "\n",
     "### Split the feature engineered dataset\n",
     "\n",
@@ -475,7 +492,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## Developing potential challenger models"
    ]
@@ -484,7 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_1_'></a>\n",
+    "<a id='toc3_1__'></a>\n",
     "\n",
     "### Train potential challenger models\n",
     "\n",
@@ -497,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_1_1_'></a>\n",
+    "<a id='toc3_1_1__'></a>\n",
     "\n",
     "#### Random forest classification model\n",
     "\n",
@@ -529,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_1_2_'></a>\n",
+    "<a id='toc3_1_2__'></a>\n",
     "\n",
     "#### Logistic regression model\n",
     "\n",
@@ -569,7 +586,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_2_'></a>\n",
+    "<a id='toc3_2__'></a>\n",
     "\n",
     "### Extract predicted probabilities\n",
     "\n",
@@ -599,7 +616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_2_1_'></a>\n",
+    "<a id='toc3_2_1__'></a>\n",
     "\n",
     "#### Compute binary predictions\n",
     "\n",
@@ -634,7 +651,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Initializing the ValidMind objects"
    ]
@@ -643,7 +660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Initialize the ValidMind datasets\n",
     "\n",
@@ -709,7 +726,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_2_'></a>\n",
+    "<a id='toc4_2__'></a>\n",
     "\n",
     "### Initialize the model objects\n",
     "\n",
@@ -747,7 +764,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_3_'></a>\n",
+    "<a id='toc4_3__'></a>\n",
     "\n",
     "### Assign predictions\n",
     "\n",
@@ -808,7 +825,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_4_'></a>\n",
+    "<a id='toc4_4__'></a>\n",
     "\n",
     "### Compute credit risk scores\n",
     "\n",
@@ -842,7 +859,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Run data quality tests\n",
     "\n",
@@ -894,7 +911,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_1_'></a>\n",
+    "<a id='toc5_1__'></a>\n",
     "\n",
     "### Run and log an individual data quality test\n",
     "\n",
@@ -933,7 +950,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_2_'></a>\n",
+    "<a id='toc5_2__'></a>\n",
     "\n",
     "### Log multiple data quality tests\n",
     "\n",
@@ -956,7 +973,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "With our data quality tests stored, let's run our first batch of tests using the same preprocessed dataset (`vm_preprocess_dataset`) and log their results."
    ]
   },
@@ -979,7 +995,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_3_'></a>\n",
+    "<a id='toc5_3__'></a>\n",
     "\n",
     "### Run data quality comparison tests\n",
     "\n",
@@ -1005,7 +1021,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Run performance tests\n",
     "\n",
@@ -1016,7 +1032,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_'></a>\n",
+    "<a id='toc6_1__'></a>\n",
     "\n",
     "### Identify performance tests\n",
     "\n",
@@ -1037,7 +1053,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_2_'></a>\n",
+    "<a id='toc6_2__'></a>\n",
     "\n",
     "### Run and log an individual performance test\n",
     "\n",
@@ -1066,7 +1082,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_3_'></a>\n",
+    "<a id='toc6_3__'></a>\n",
     "\n",
     "### Log multiple performance tests\n",
     "\n",
@@ -1100,7 +1116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_4_'></a>\n",
+    "<a id='toc6_4__'></a>\n",
     "\n",
     "### Evaluate performance of the champion model\n",
     "\n",
@@ -1126,13 +1142,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_5_'></a>\n",
+    "<a id='toc6_5__'></a>\n",
     "\n",
     "### Evaluate performance of challenger models\n",
     "\n",
     "We've now conducted similar tests as the model development team for our champion model, with the aim of verifying their test results.\n",
     "\n",
-    "Next, let's see how our challenger models compare. We'll use the same batch of tests here as we did in `mpt`, but append a different `result_id` to indicate that these results should be associated with our challenger models:\n"
+    "Next, let's see how our challenger models compare. We'll use the same batch of tests here as we did in `mpt`, but append a different `result_id` to indicate that these results should be associated with our challenger models:"
    ]
   },
   {
@@ -1154,7 +1170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_5_1_'></a>\n",
+    "<a id='toc6_5_1__'></a>\n",
     "\n",
     "#### Enable custom context for test descriptions"
    ]
@@ -1182,7 +1198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d1e90ba",
    "metadata": {},
    "source": [
     "Enabling use case context allows you to pass in additional context to the LLM-generated text descriptions within `context`:"
@@ -1274,7 +1289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_5_2_'></a>\n",
+    "<a id='toc6_5_2__'></a>\n",
     "\n",
     "#### Run performance comparison tests\n",
     "\n",
@@ -1309,7 +1324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Adjust a ValidMind test\n",
     "\n",
@@ -1360,7 +1375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_'></a>\n",
+    "<a id='toc8__'></a>\n",
     "\n",
     "## Run diagnostic tests\n",
     "\n",
@@ -1408,7 +1423,7 @@
    "source": [
     "Let's also conduct *robustness* and *stability* testing of the two models with the [`RobustnessDiagnosis` test](https://docs.validmind.ai/tests/model_validation/sklearn/RobustnessDiagnosis.html).\n",
     "\n",
-    "Robustness refers to a model's ability to maintain consistent performance, and stability refers to a model's ability to produce consistent outputs over time across different data subsets.\n"
+    "Robustness refers to a model's ability to maintain consistent performance, and stability refers to a model's ability to produce consistent outputs over time across different data subsets."
    ]
   },
   {
@@ -1430,7 +1445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_'></a>\n",
+    "<a id='toc9__'></a>\n",
     "\n",
     "## Run feature importance tests\n",
     "\n",
@@ -1470,7 +1485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc10_'></a>\n",
+    "<a id='toc10__'></a>\n",
     "\n",
     "## Implement a custom test\n",
     "\n",
@@ -1580,7 +1595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc11_'></a>\n",
+    "<a id='toc11__'></a>\n",
     "\n",
     "## Verify test runs\n",
     "\n",
@@ -1742,7 +1757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc12_'></a>\n",
+    "<a id='toc12__'></a>\n",
     "\n",
     "## Next steps"
    ]
@@ -1751,7 +1766,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc12_1_'></a>\n",
+    "<a id='toc12_1__'></a>\n",
     "\n",
     "### Work with your validation report\n",
     "\n",
@@ -1768,7 +1783,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc12_2_'></a>\n",
+    "<a id='toc12_2__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -1784,7 +1799,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc13_'></a>\n",
+    "<a id='toc13__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
