--- a/site/notebooks/code_samples/ongoing_monitoring/application_scorecard_ongoing_monitoring.ipynb
+++ b/site/notebooks/code_samples/ongoing_monitoring/application_scorecard_ongoing_monitoring.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ongoing Monitoring for Application Scorecard \n",
+    "# Ongoing Monitoring for Application Scorecard\n",
     "\n",
     "In this notebook, you'll learn how to seamlessly monitor your production models using the ValidMind Platform.\n",
     "\n",
@@ -15,13 +15,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "::: {.content-hidden when-format=\"html\"}\n",
+    "## Contents    \n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
+    "  - [Initialize the Python environment](#toc2_3__)    \n",
+    "  - [Preview the monitoring template](#toc2_4__)    \n",
+    "- [Load the reference and monitoring datasets](#toc3__)    \n",
+    "- [Train the model](#toc4__)    \n",
+    "  - [Initialize the ValidMind datasets](#toc4_1__)    \n",
+    "  - [Initialize a model object](#toc4_2__)    \n",
+    "  - [Assign prediction values and probabilities to the datasets](#toc4_3__)    \n",
+    "  - [Compute credit risk scores](#toc4_4__)    \n",
+    "  - [Adding custom context to the LLM descriptions](#toc4_5__)    \n",
+    "  - [Monitoring data description](#toc4_6__)    \n",
+    "  - [Target and feature drift](#toc4_7__)    \n",
+    "  - [Classification accuracy](#toc4_8__)    \n",
+    "  - [Class discrimination](#toc4_9__)    \n",
+    "  - [Scoring](#toc4_10__)    \n",
+    "  - [Model insights](#toc4_11__)    \n",
+    "  - [Diagnostic monitoring](#toc4_12__)    \n",
+    "  - [Robustness monitoring](#toc4_13__)    \n",
+    "  - [Performance history](#toc4_14__)    \n",
+    "\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=2\n",
+    "\tmaxLevel=4\n",
+    "\t/jn-toc-notebook-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc1__'></a>\n",
+    "\n",
     "## About ValidMind\n",
     "\n",
     "ValidMind is a suite of tools for managing model risk, including risk associated with AI and statistical models.\n",
     "\n",
     "You use the ValidMind Library to automate documentation, validation, monitoring tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
     "\n",
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -29,7 +77,7 @@
     "\n",
     "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n",
     "\n",
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -39,7 +87,7 @@
     "<br></br>\n",
     "<a href=\"https://docs.validmind.ai/guide/configuration/register-with-validmind.html\" style=\"color: #DE257E;\"><b>Register with ValidMind</b></a></div>\n",
     "\n",
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -71,7 +119,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install the ValidMind Library\n",
+    "<a id='toc2__'></a>\n",
+    "\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_1__'></a>\n",
+    "\n",
+    "### Install the ValidMind Library\n",
     "\n",
     "To install the library:"
    ]
@@ -89,30 +148,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize the ValidMind Library\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "<a id='toc3_1_'></a>\n",
+    "#### Register sample model\n",
     "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
     "\n",
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -143,14 +235,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize the Python environment\n",
+    "<a id='toc2_3__'></a>\n",
+    "\n",
+    "### Initialize the Python environment\n",
     "\n",
     "Next, let's import the necessary libraries and set up your Python environment for data analysis:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,6 +267,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc2_4__'></a>\n",
+    "\n",
     "### Preview the monitoring template\n",
     "\n",
     "A template predefines sections for your model monitoring documentation and provides a general outline to follow, making the documentation process much easier.\n",
@@ -193,6 +289,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc3__'></a>\n",
+    "\n",
     "## Load the reference and monitoring datasets\n",
     "\n",
     "The sample dataset used here is provided by the ValidMind library. For demonstration purposes we'll use the training, test dataset splits as `reference` and `monitoring` datasets."
@@ -232,6 +330,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4__'></a>\n",
+    "\n",
     "## Train the model\n",
     "\n",
     "In this section, we focus on constructing and refining our predictive model. \n",
@@ -257,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,6 +393,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_1__'></a>\n",
+    "\n",
     "### Initialize the ValidMind datasets\n",
     "\n",
     "Before you can run tests, you must first initialize a ValidMind dataset object using the [`init_dataset`](https://docs.validmind.ai/validmind/validmind.html#init_dataset) function from the ValidMind (`vm`) module.\n",
@@ -308,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,6 +431,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_2__'></a>\n",
+    "\n",
     "### Initialize a model object\n",
     "\n",
     "You will also need to initialize a ValidMind model object (`vm_model`) that can be passed to other functions for analysis and tests on the data. You simply intialize this model object with [`vm.init_model()`](https://docs.validmind.ai/validmind/validmind.html#init_model):"
@@ -336,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,6 +454,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_3__'></a>\n",
+    "\n",
     "### Assign prediction values and probabilities to the datasets\n",
     "\n",
     "With our model now trained, we'll move on to assigning both the predictive probabilities coming directly from the model's predictions, and the binary prediction after applying the cutoff threshold described in the previous steps. \n",
@@ -359,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,6 +486,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_4__'></a>\n",
+    "\n",
     "### Compute credit risk scores\n",
     "\n",
     "In this phase, we translate model predictions into actionable scores using probability estimates generated by our trained model."
@@ -387,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,6 +511,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_5__'></a>\n",
+    "\n",
     "### Adding custom context to the LLM descriptions\n",
     "\n",
     "To enable the LLM descriptions context, you need to set the `VALIDMIND_LLM_DESCRIPTIONS_CONTEXT_ENABLED` environment variable to `1`. This will enable the LLM descriptions context, which will be used to provide additional context to the LLM descriptions. This is a global setting that will affect all tests."
@@ -410,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,6 +589,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_6__'></a>\n",
+    "\n",
     "### Monitoring data description\n",
     "\n",
     "The Monitoring Data Description tests aim to provide a comprehensive statistical analysis of the monitoring dataset's characteristics. These tests examine the basic statistical properties, identify any missing data patterns, assess data uniqueness, visualize numerical feature distributions, and evaluate feature relationships through correlation analysis.\n",
@@ -602,6 +714,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_7__'></a>\n",
+    "\n",
     "### Target and feature drift\n",
     "\n",
     "Next, the goal is to investigate the distributional characteristics of predictions and features to determine if the underlying data has changed. These tests are crucial for assessing the expected accuracy of the model.\n",
@@ -726,6 +840,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_8__'></a>\n",
+    "\n",
     "### Classification accuracy\n",
     "\n",
     "We now evaluate the model's predictive performance by comparing its behavior between reference and monitoring datasets. These tests analyze shifts in overall accuracy metrics, examine changes in the confusion matrix to identify specific classification pattern changes, and assess the model's probability calibration across different prediction thresholds. \n",
@@ -792,6 +908,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_9__'></a>\n",
+    "\n",
     "### Class discrimination\n",
     "\n",
     "The following tests assess the model's ability to effectively separate different classes in both reference and monitoring datasets. These tests analyze the model's discriminative power by examining the separation between class distributions, evaluating changes in the ROC curve characteristics, comparing probability distribution patterns, and assessing cumulative prediction trends. \n",
@@ -869,6 +987,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_10__'></a>\n",
+    "\n",
     "### Scoring\n",
     "\n",
     "Next we analyze the distribution and stability of credit scores across reference and monitoring datasets. These tests evaluate shifts in score distributions, examine changes in score band populations, and assess the relationship between scores and default rates. \n",
@@ -918,6 +1038,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_11__'></a>\n",
+    "\n",
     "### Model insights"
    ]
   },
@@ -974,6 +1096,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_12__'></a>\n",
+    "\n",
     "### Diagnostic monitoring"
    ]
   },
@@ -1014,6 +1138,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_13__'></a>\n",
+    "\n",
     "### Robustness monitoring"
    ]
   },
@@ -1046,6 +1172,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_14__'></a>\n",
+    "\n",
     "### Performance history\n",
     "\n",
     "In this section we showcase how to track and visualize the temporal evolution of key model performance metrics, including AUC, F1 score, precision, recall, and accuracy. For demonstration purposes, the section simulates historical performance data by introducing a gradual downward trend and random noise to these metrics over a specified time period. These tests are useful for analyzing the stability and trends in model performance indicators, helping to identify potential degradation or unexpected fluctuations in model behavior over time. \n",
