--- a/site/notebooks/code_samples/time_series/quickstart_time_series_high_code.ipynb
+++ b/site/notebooks/code_samples/time_series/quickstart_time_series_high_code.ipynb
@@ -19,37 +19,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc0_'></a>\n",
-    "\n",
+    "::: {.content-hidden when-format=\"html\"}\n",
     "## Contents    \n",
-    "- [About ValidMind](#toc1_)    \n",
-    "  - [Before you begin](#toc1_1_)    \n",
-    "  - [New to ValidMind?](#toc1_2_)    \n",
-    "  - [Key concepts](#toc1_3_)    \n",
-    "- [Install the ValidMind Library](#toc2_)\n",
-    "  - [Get your code snippet](#toc3_1_)\n",
-    "- [Initialize the ValidMind Library](#toc3_)    \n",
-    "- [Initialize the Python environment](#toc4_)    \n",
-    "  - [Preview the documentation template](#toc4_1_)    \n",
-    "- [Load the sample dataset](#toc5_)    \n",
-    "- [Document the model](#toc6_)    \n",
-    "  - [Prepocess the raw dataset](#toc6_1_)    \n",
-    "  - [Initialize the ValidMind datasets](#toc6_2_)    \n",
-    "  - [Initialize a model object](#toc6_3_)    \n",
-    "  - [Assign predictions to the datasets](#toc6_4_)    \n",
-    "  - [Run the full suite of tests](#toc6_5_)    \n",
-    "- [Next steps](#toc7_)    \n",
-    "  - [Work with your model documentation](#toc7_1_)    \n",
-    "  - [Discover more learning resources](#toc7_2_)   \n",
-    "- [Upgrade ValidMind](#toc8_) \n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
+    "  - [Initialize the Python environment](#toc2_3__)    \n",
+    "  - [Preview the documentation template](#toc2_4__)    \n",
+    "- [Load the sample dataset](#toc3__)    \n",
+    "- [Document the model](#toc4__)    \n",
+    "  - [Prepocess the raw dataset](#toc4_1__)    \n",
+    "  - [Train random forests and gradient boosting regressor models](#toc4_2__)    \n",
+    "  - [Initialize the ValidMind datasets](#toc4_3__)    \n",
+    "  - [Initialize the model objects](#toc4_4__)    \n",
+    "  - [Assign predictions to the datasets](#toc4_5__)    \n",
+    "  - [Run data validation tests](#toc4_6__)    \n",
+    "  - [Run model validation tests](#toc4_7__)    \n",
+    "- [Next steps](#toc5__)    \n",
+    "  - [Work with your model documentation](#toc5_1__)    \n",
+    "  - [Discover more learning resources](#toc5_2__)    \n",
+    "- [Upgrade ValidMind](#toc6__)    \n",
     "\n",
-    "<!-- vscode-jupyter-toc-config\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
     "\tanchor=true\n",
     "\tflat=false\n",
     "\tminLevel=2\n",
     "\tmaxLevel=4\n",
-    "\t/vscode-jupyter-toc-config -->\n",
+    "\t/jn-toc-notebook-config -->\n",
     "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
@@ -57,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
@@ -65,7 +70,7 @@
     "\n",
     "You use the ValidMind Library to automate documentation and validation tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
     "\n",
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -73,7 +78,7 @@
     "\n",
     "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n",
     "\n",
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -83,7 +88,7 @@
     "<br></br>\n",
     "<a href=\"https://docs.validmind.ai/guide/configuration/register-with-validmind.html\" style=\"color: #DE257E;\"><b>Register with ValidMind</b></a></div>\n",
     "\n",
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -117,9 +122,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
-    "## Install the ValidMind Library\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_1__'></a>\n",
+    "\n",
+    "### Install the ValidMind Library\n",
     "\n",
     "To install the library:"
    ]
@@ -137,32 +151,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
-    "## Initialize the ValidMind Library\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "#### Register sample model\n",
     "\n",
-    "<a id='toc3_1_'></a>\n",
-    "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Analytics`\n",
     "\n",
-    "   - Documentation template: `Time Series Forecasting`\n",
-    "   - Use case: `Marketing/Sales - Analytics`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Time Series Forecasting`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -192,9 +237,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc2_3__'></a>\n",
     "\n",
-    "## Initialize the Python environment\n",
+    "### Initialize the Python environment\n",
     "\n",
     "Next, let's import the necessary libraries and set up your Python environment for data analysis:"
    ]
@@ -216,13 +261,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_1_'></a>\n",
+    "<a id='toc2_4__'></a>\n",
     "\n",
     "### Preview the documentation template\n",
     "\n",
-    "A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model.\n",
     "\n",
-    "You will upload documentation and test results into this template later on. For now, take a look at the structure that the template provides with the `vm.preview_template()` function from the ValidMind library and note the empty sections:"
+    "You will upload documentation and test results unique to your model based on this template later on. For now, **take a look at the default structure that the template provides with [the `vm.preview_template()` function](https://docs.validmind.ai/validmind/validmind.html#preview_template)** from the ValidMind library and note the empty sections:"
    ]
   },
   {
@@ -238,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## Load the sample dataset\n",
     "\n",
@@ -267,18 +312,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Document the model\n",
     "\n",
-    "As part of documenting the model with the ValidMind Library, you need to preprocess the raw dataset, initialize some training and test datasets, initialize a model object you can use for testing, and then run the full suite of tests.\n"
+    "As part of documenting the model with the ValidMind Library, you need to preprocess the raw dataset, initialize some training and test datasets, initialize a model object you can use for testing, and then run the full suite of tests."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Prepocess the raw dataset\n",
     "\n",
@@ -314,6 +359,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_2__'></a>\n",
+    "\n",
     "### Train random forests and gradient boosting regressor models\n",
     "\n",
     "This section trains random forest and gradient boosting models on differenced data, transforms predictions back to the original scale, and evaluates model performance using Mean Squared Error (MSE) and R-squared (R²) scores. \n",
@@ -321,7 +368,7 @@
     "The following helper functions are used to post-process predictions and evaluate model performance:\n",
     "\n",
     "- `transform_to_levels`: Reconstructs the original values from differenced predictions by cumulatively summing them, starting from a given initial value.\n",
-    "- `evaluate_model`: Calculates the Mean Squared Error (MSE) and R-squared (R²) score to evaluate the accuracy of the predictions against the true values.\n"
+    "- `evaluate_model`: Calculates the Mean Squared Error (MSE) and R-squared (R²) score to evaluate the accuracy of the predictions against the true values."
    ]
   },
   {
@@ -402,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_2_'></a>\n",
+    "<a id='toc4_3__'></a>\n",
     "\n",
     "### Initialize the ValidMind datasets\n",
     "\n",
@@ -464,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_3_'></a>\n",
+    "<a id='toc4_4__'></a>\n",
     "\n",
     "### Initialize the model objects\n",
     "\n",
@@ -492,11 +539,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_4_'></a>\n",
+    "<a id='toc4_5__'></a>\n",
     "\n",
     "### Assign predictions to the datasets\n",
     "\n",
-    "We can now use the assign_predictions() method from the Dataset object to link existing predictions to any model. If no prediction values are passed, the method will compute predictions automatically:\n"
+    "We can now use the assign_predictions() method from the Dataset object to link existing predictions to any model. If no prediction values are passed, the method will compute predictions automatically:"
    ]
   },
   {
@@ -542,6 +589,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_6__'></a>\n",
+    "\n",
     "### Run data validation tests"
    ]
   },
@@ -675,6 +724,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_7__'></a>\n",
+    "\n",
     "### Run model validation tests"
    ]
   },
@@ -847,13 +898,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
     "You can look at the results of this test suite right in the notebook where you ran the code, as you would expect. But there is a better way — use the ValidMind Platform to work with your model documentation.\n",
     "\n",
-    "<a id='toc7_1_'></a>\n",
+    "<a id='toc5_1__'></a>\n",
     "\n",
     "### Work with your model documentation\n",
     "\n",
@@ -863,7 +914,7 @@
     "\n",
     "What you see is the full draft of your model documentation in a more easily consumable version. From here, you can make qualitative edits to model documentation, view guidelines, collaborate with validators, and submit your model documentation for approval when it's ready. [Learn more ...](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html)\n",
     "\n",
-    "<a id='toc7_2_'></a>\n",
+    "<a id='toc5_2__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -879,7 +930,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
