--- a/site/notebooks/how_to/customize_test_result_descriptions.ipynb
+++ b/site/notebooks/how_to/customize_test_result_descriptions.ipynb
@@ -10,7 +10,6 @@
     "\n",
     "In this notebook, you'll learn how to take complete control over the context that drives test description generation. ValidMind provides a `context` parameter in `run_test` that accepts a dictionary with three complementary keys for comprehensive context management:\n",
     "\n",
-    "\n",
     "- `instructions`: Overwrites ValidMind’s default result description structure. If you provide custom instructions, they take full priority over the built-in ones. This parameter controls how the final description is structured and presented. Use this to specify formatting requirements, target different audiences (executives vs. technical teams), or ensure consistent report styles across your organization.  \n",
     "\n",
     "- `test_description`: Overwrites the test’s built-in docstring if provided. This parameter contains the technical mechanics of how the test works. However, for generic tests where the methodology isn't the focus, you may use this to describe what's actually being analyzed—the specific variables, features, or metrics being plotted and their business meaning rather than the statistical mechanics. You can also override ValidMind's built-in test documentation if you prefer different structure or language. \n",
@@ -26,28 +25,35 @@
    "source": [
     "::: {.content-hidden when-format=\"html\"}\n",
     "## Contents    \n",
-    "- [Setup](#toc1_)    \n",
-    "  - [Install the ValidMind Library](#toc1_1_)    \n",
-    "  - [Initialize the ValidMind Library](#toc1_2_)    \n",
-    "  - [Initialize the Python environment](#toc1_3_)\n",
-    "- [Model development](#toc2_)\n",
-    "- [Understanding test result descriptions](#toc3_)\n",
-    "  - [Default LLM-generated descriptions](#toc3_1_)\n",
-    "- [Customizing results structure with instructions](#toc4_)\n",
-    "  - [Simple instruction example](#toc4_1_)\n",
-    "  - [Structured format instructions](#toc4_2_)\n",
-    "  - [Template with LLM fill-ins](#toc4_3_)\n",
-    "  - [Mixed static and dynamic content](#toc4_4_)\n",
-    "- [Enriching results with additional context](#toc5_)\n",
-    "  - [Understanding the additional context parameter](#toc5_1_)\n",
-    "  - [Basic additional context usage](#toc5_2_)\n",
-    "  - [Combining instructions and additional context](#toc5_3_)\n",
-    "- [Overriding test documentation with test description parameter](#toc6_)\n",
-    "  - [Structure of ValidMind built-in test docstrings](#toc6_1_)\n",
-    "  - [Understanding the test description parameter](#toc6_2_)\n",
-    "  - [Basic test description parameter usage](#toc6_3_)\n",
-    "  - [Combining test description with instructions and additional context](#toc6_4_)\n",
-    "- [Best practices for managing context](#toc7_)\n",
+    "- [Setting up](#toc1__)    \n",
+    "  - [Install the ValidMind Library](#toc1_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc1_2__)    \n",
+    "    - [Register sample model](#toc1_2_1__)    \n",
+    "    - [Apply documentation template](#toc1_2_2__)    \n",
+    "    - [Get your code snippet](#toc1_2_3__)    \n",
+    "  - [Initialize the Python environment](#toc1_3__)    \n",
+    "- [Model development](#toc2__)    \n",
+    "  - [Load data](#toc2_1__)    \n",
+    "  - [Fit the model](#toc2_2__)    \n",
+    "  - [Initialize the ValidMind objects](#toc2_3__)    \n",
+    "- [Understanding test result descriptions](#toc3__)    \n",
+    "  - [Default LLM-generated descriptions](#toc3_1__)    \n",
+    "- [Customizing results structure with instructions](#toc4__)    \n",
+    "  - [Simple instruction example](#toc4_1__)    \n",
+    "  - [Structured format instructions](#toc4_2__)    \n",
+    "  - [Template with LLM fill-ins](#toc4_3__)    \n",
+    "  - [Mixed static and dynamic content](#toc4_4__)    \n",
+    "- [Enriching results with additional context](#toc5__)    \n",
+    "  - [Understanding the additional context parameter](#toc5_1__)    \n",
+    "  - [Basic additional context usage](#toc5_2__)    \n",
+    "  - [Combining instructions and additional context](#toc5_3__)    \n",
+    "- [Overriding test documentation with test description parameter](#toc6__)    \n",
+    "  - [Structure of ValidMind built-in test docstrings](#toc6_1__)    \n",
+    "  - [Understanding the test description parameter](#toc6_2__)    \n",
+    "  - [Basic test description usage](#toc6_3__)    \n",
+    "  - [Combining test description with instructions and additional context](#toc6_4__)    \n",
+    "- [Best practices for managing context](#toc7__)    \n",
+    "\n",
     ":::\n",
     "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
@@ -63,9 +69,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
-    "## Setup\n",
+    "## Setting up\n",
     "\n",
     "This section covers the basic setup required to run the examples in this notebook. We'll install ValidMind, connect to the platform, and create a customer churn model that we'll use to demonstrate the instructions and knowledge parameters throughout the examples."
    ]
@@ -74,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Install the ValidMind Library\n",
     "\n",
@@ -94,30 +100,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
-    "### Initialize the ValidMind Library\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc1_2_1__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "#### Register sample model\n",
     "\n",
-    "#### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
     "\n",
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc1_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc1_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -147,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Initialize the Python environment\n",
     "\n",
@@ -170,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
     "## Model development\n",
     "\n",
@@ -181,6 +220,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc2_1__'></a>\n",
+    "\n",
     "### Load data\n",
     "\n",
     "First, we'll import a sample ValidMind dataset and load it into a pandas dataframe:"
@@ -208,6 +249,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc2_2__'></a>\n",
+    "\n",
     "### Fit the model\n",
     "\n",
     "Then, we prepare the data and model by first splitting the DataFrame into training, validation, and test sets, then separating features from targets. An XGBoost classifier is initialized with early stopping, evaluation metrics (error, logloss, and auc) are defined, and the model is trained on the training data with validation monitoring."
@@ -242,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc2_3__'></a>\n",
     "\n",
     "### Initialize the ValidMind objects\n",
     "\n",
@@ -331,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## Understanding test result descriptions\n",
     "\n",
@@ -342,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_1_'></a>\n",
+    "<a id='toc3_1__'></a>\n",
     "\n",
     "### Default LLM-generated descriptions\n",
     "\n",
@@ -378,7 +421,6 @@
     "- **Conclusions**:\n",
     "The conclusion ties the insights together into a coherent narrative. It synthesizes the findings into objective technical takeaways and emphasizes what the results reveal about the model or data.\n",
     "\n",
-    "\n",
     "Let's see a default description:"
    ]
   },
@@ -401,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Customizing results structure with instructions\n",
     "\n",
@@ -414,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Simple instruction example\n",
     "\n",
@@ -448,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_2_'></a>\n",
+    "<a id='toc4_2__'></a>\n",
     "\n",
     "### Structured format instructions\n",
     "\n",
@@ -497,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_3_'></a>\n",
+    "<a id='toc4_3__'></a>\n",
     "\n",
     "### Template with LLM fill-ins\n",
     "\n",
@@ -563,7 +605,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_4_'></a>\n",
+    "<a id='toc4_4__'></a>\n",
     "\n",
     "### Mixed static and dynamic content\n",
     "\n",
@@ -638,18 +680,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Enriching results with additional context\n",
     "\n",
-    "While the `instructions` parameter controls how your test descriptions are formatted and structured, the `additional_context` parameter provides *background information* about what the results mean for your specific business situation. Think of `instructions` as the \"presentation guide\" and `additional_context` as the \"business background\" that helps the LLM understand what matters most in your organization and how to interpret the results in your specific context.\n"
+    "While the `instructions` parameter controls how your test descriptions are formatted and structured, the `additional_context` parameter provides *background information* about what the results mean for your specific business situation. Think of `instructions` as the \"presentation guide\" and `additional_context` as the \"business background\" that helps the LLM understand what matters most in your organization and how to interpret the results in your specific context."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_1_'></a>\n",
+    "<a id='toc5_1__'></a>\n",
     "\n",
     "### Understanding the additional context parameter\n",
     "\n",
@@ -667,7 +709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_2_'></a>\n",
+    "<a id='toc5_2__'></a>\n",
     "\n",
     "### Basic additional context usage\n",
     "\n",
@@ -710,7 +752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_3_'></a>\n",
+    "<a id='toc5_3__'></a>\n",
     "\n",
     "### Combining instructions and additional context\n",
     "\n",
@@ -778,7 +820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Overriding test documentation with test description parameter\n",
     "\n",
@@ -789,7 +831,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_'></a>\n",
+    "<a id='toc6_1__'></a>\n",
     "\n",
     "### Structure of ValidMind built-in test docstrings\n",
     "\n",
@@ -822,7 +864,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_2_'></a>\n",
+    "<a id='toc6_2__'></a>\n",
     "\n",
     "### Understanding the test description parameter\n",
     "\n",
@@ -839,7 +881,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_3_'></a>\n",
+    "<a id='toc6_3__'></a>\n",
     "\n",
     "### Basic test description usage"
    ]
@@ -881,7 +923,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_4_'></a>\n",
+    "<a id='toc6_4__'></a>\n",
     "\n",
     "### Combining test description with instructions and additional context"
    ]
@@ -933,7 +975,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Best practices for managing context\n",
     "\n",
@@ -955,8 +997,7 @@
     "\n",
     "Since LLMs can produce variable responses, use hardcoded sections in your instructions for content that requires no variability, combined with specific placeholders for data you trust the LLM to generate. For example, include mandatory disclaimers, policy references, and fixed formatting exactly as written, while using placeholders like `[ANALYZE_PERFORMANCE_METRICS]` for dynamic content. This approach ensures critical information appears consistently while still leveraging the LLM's analytical capabilities.\n",
     "\n",
-    "Use `test_description` and `additional_context` parameters to anchor test results descriptions in your specific domain and business context, preventing the LLM from generating generic or inappropriate interpretations. Then use `instructions` to explicitly direct the LLM to ground its analysis in this provided context, such as \"Base all recommendations on the thresholds specified in the additional context section\" or \"Interpret all metrics according to the test description provided.\"\n",
-    "\n"
+    "Use `test_description` and `additional_context` parameters to anchor test results descriptions in your specific domain and business context, preventing the LLM from generating generic or inappropriate interpretations. Then use `instructions` to explicitly direct the LLM to ground its analysis in this provided context, such as \"Base all recommendations on the thresholds specified in the additional context section\" or \"Interpret all metrics according to the test description provided.\""
    ]
   }
  ],
