--- a/site/notebooks/how_to/run_tests/2_run_comparison_tests.ipynb
+++ b/site/notebooks/how_to/run_tests/2_run_comparison_tests.ipynb
@@ -24,37 +24,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "::: {.content-hidden when-format=\"html\"}\n",
     "## Contents    \n",
-    "- [About ValidMind](#toc1_)    \n",
-    "  - [Before you begin](#toc1_1_)    \n",
-    "  - [New to ValidMind?](#toc1_2_)    \n",
-    "  - [Key concepts](#toc1_3_)    \n",
-    "- [Install the ValidMind Library](#toc2_)    \n",
-    "- [Initialize the ValidMind Library](#toc3_)\n",
-    "  - [Get your code snippet](#toc3_1_)        \n",
-    "- [List and filter available tests](#toc4_)    \n",
-    "- [Load the sample dataset and run a model test](#toc5_)    \n",
-    "  - [Initialize a ValidMind dataset](#toc5_1_)    \n",
-    "  - [Train a sample XGBoost model](#toc5_2_)    \n",
-    "  - [Initialize a ValidMind model](#toc5_3_)    \n",
-    "  - [Assign predictions to the datasets](#toc5_4_)    \n",
-    "  - [Run the test with one model](#toc5_5_)      \n",
-    "- [Run comparison tests](#toc6_)    \n",
-    "  - [Run a comparison test with multiple models](#toc6_1_)    \n",
-    "  - [Run a comparison test with multiple parameters' values](#toc6_2_)    \n",
-    "  - [Run a classifier performance comparison test](#toc6_3_)      \n",
-    "- [Add test results to documentation](#toc7_)    \n",
-    "- [Next steps](#toc8_)    \n",
-    "  - [Discover more learning resources](#toc8_1_)  \n",
-    "- [Upgrade ValidMind](#toc9_)  \n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
+    "  - [Initialize the Python environment](#toc2_3__)    \n",
+    "- [List and filter available tests](#toc3__)    \n",
+    "- [Load the sample dataset and run a model test](#toc4__)    \n",
+    "  - [Initialize a ValidMind dataset](#toc4_1__)    \n",
+    "  - [Train a sample XGBoost model](#toc4_2__)    \n",
+    "  - [Initialize a ValidMind model](#toc4_3__)    \n",
+    "  - [Assign predictions to the datasets](#toc4_4__)    \n",
+    "  - [Run the test with one model](#toc4_5__)    \n",
+    "- [Run comparison tests](#toc5__)    \n",
+    "  - [Run a comparison test with multiple models](#toc5_1__)    \n",
+    "  - [Run a comparison test with multiple parameters' values](#toc5_2__)    \n",
+    "  - [Run a comparison test with multiple datasets](#toc5_3__)    \n",
+    "- [Add test results to documentation](#toc6__)    \n",
+    "- [Next steps](#toc7__)    \n",
+    "  - [Discover more learning resources](#toc7_1__)    \n",
+    "- [Upgrade ValidMind](#toc8__)    \n",
     "\n",
-    "<!-- vscode-jupyter-toc-config\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
     "\tanchor=true\n",
     "\tflat=false\n",
     "\tminLevel=2\n",
     "\tmaxLevel=4\n",
-    "\t/vscode-jupyter-toc-config -->\n",
+    "\t/jn-toc-notebook-config -->\n",
     "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
@@ -62,21 +68,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "ValidMind is a suite of tools for managing model risk, including risk associated with AI and statistical models.\n",
     "\n",
     "You use the ValidMind Library to automate documentation and validation tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
     "\n",
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "This notebook assumes you have basic familiarity with Python, including an understanding of how functions work. If you are new to Python, you can still run the notebook but we recommend further familiarizing yourself with the language.\n",
     "\n",
     "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n",
     "\n",
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "If you haven't already seen our documentation on the [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html), we recommend you begin by exploring the available resources in this section. There, you can learn more about documenting models and running tests, as well as find code samples and our Python Library API reference.\n",
@@ -90,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -118,9 +124,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
-    "## Install the ValidMind Library\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_1__'></a>\n",
+    "\n",
+    "### Install the ValidMind Library\n",
     "\n",
     "To install the library:"
    ]
@@ -138,32 +153,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
-    "## Initialize the ValidMind Library\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "#### Register sample model\n",
     "\n",
-    "<a id='toc3_1_'></a>\n",
-    "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
     "\n",
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:\n"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -193,9 +239,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc2_3__'></a>\n",
     "\n",
-    "## Initialize the Python environment\n",
+    "### Initialize the Python environment\n",
     "\n",
     "Next, let's import the necessary libraries and set up your Python environment for data analysis:"
    ]
@@ -215,13 +261,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## List and filter available tests\n",
     "\n",
     "Before we run a comparison test, let's find a suitable test for this demonstration. Let's assume you want to evaluate the performance results for a model.\n",
     "\n",
-    "In the [Explore tests](../explore_tests.ipynb) notebook, we learned how to pass a `filter` to the `list_tests` function. We'll do the same here to find the test ID for the confusion matrix:\n"
+    "In the [Explore tests](../explore_tests.ipynb) notebook, we learned how to pass a `filter` to the `list_tests` function. We'll do the same here to find the test ID for the confusion matrix:"
    ]
   },
   {
@@ -237,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the output, you can see that the test ID for the pearson correlation matrix is `validmind.model_validation.sklearn.ClassifierPerformance`. The `describe_test` function gives you more information about the test, including its **Required Inputs**:\n"
+    "From the output, you can see that the test ID for the pearson correlation matrix is `validmind.model_validation.sklearn.ClassifierPerformance`. The `describe_test` function gives you more information about the test, including its **Required Inputs**:"
    ]
   },
   {
@@ -273,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Load the sample dataset and run a model test\n",
     "\n",
@@ -302,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Initialize a ValidMind dataset\n",
     "\n",
@@ -314,7 +360,7 @@
     "- `input_id`: A unique identifier that allows tracking what inputs are used when running each individual test.\n",
     "- `target_column`: A required argument if tests require access to true values. This is the name of the target column in the dataset.\n",
     "\n",
-    "Below you can see how to initialize a VM dataset from a Pandas dataset. Since we are going to train a model and run some tests on it, we will create a dataset split from `raw_df` and initialize a VM dataset for the training and test datasets, which will be used for running comparison tests:\n"
+    "Below you can see how to initialize a VM dataset from a Pandas dataset. Since we are going to train a model and run some tests on it, we will create a dataset split from `raw_df` and initialize a VM dataset for the training and test datasets, which will be used for running comparison tests:"
    ]
   },
   {
@@ -343,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_2_'></a>\n",
+    "<a id='toc4_2__'></a>\n",
     "\n",
     "### Train a sample XGBoost model\n",
     "\n",
@@ -377,11 +423,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_3_'></a>\n",
+    "<a id='toc4_3__'></a>\n",
     "\n",
     "### Initialize a ValidMind model\n",
     "\n",
-    "Now, you can initialize a ValidMind model object (`vm_model`) that can be passed to other functions for analysis and tests on the data. You simply intialize this model object with [`vm.init_model()`](https://docs.validmind.ai/validmind/validmind.html#init_model):\n"
+    "Now, you can initialize a ValidMind model object (`vm_model`) that can be passed to other functions for analysis and tests on the data. You simply intialize this model object with [`vm.init_model()`](https://docs.validmind.ai/validmind/validmind.html#init_model):"
    ]
   },
   {
@@ -400,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_4_'></a>\n",
+    "<a id='toc4_4__'></a>\n",
     "\n",
     "### Assign predictions to the datasets\n",
     "\n",
@@ -421,11 +467,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_5_'></a>\n",
+    "<a id='toc4_5__'></a>\n",
     "\n",
     "### Run the test with one model\n",
     "\n",
-    "You can now call `run_test` with the new `vm_test_ds` and `vm_model_xgb` objects as inputs:\n"
+    "You can now call `run_test` with the new `vm_test_ds` and `vm_model_xgb` objects as inputs:"
    ]
   },
   {
@@ -447,7 +493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Run comparison tests\n",
     "\n",
@@ -529,7 +575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_'></a>\n",
+    "<a id='toc5_1__'></a>\n",
     "\n",
     "### Run a comparison test with multiple models\n",
     "\n",
@@ -555,7 +601,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_2_'></a>\n",
+    "<a id='toc5_2__'></a>\n",
+    "\n",
     "### Run a comparison test with multiple parameters' values\n",
     "\n",
     "Now you can run the test with the `param_grid` object. Note that we're adding a small extra identifier to the test ID to differentiate the results in the documentation. This is optional, but it can be useful to differentiate the results when you have multiple tests with the same ID."
@@ -583,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_3_'></a>\n",
+    "<a id='toc5_3__'></a>\n",
     "\n",
     "### Run a comparison test with multiple datasets\n",
     "\n",
@@ -611,7 +658,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Add test results to documentation\n",
     "\n",
@@ -640,7 +687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
@@ -648,7 +695,7 @@
     "\n",
     "What you see is the full draft of your model documentation in a more easily consumable version. From here, you can make qualitative edits to model documentation, view guidelines, collaborate with validators, and submit your model documentation for approval when it's ready.\n",
     "\n",
-    "<a id='toc8_1_'></a>\n",
+    "<a id='toc7_1__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -666,7 +713,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_'></a>\n",
+    "<a id='toc8__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
