--- a/site/notebooks/how_to/run_tests_that_require_multiple_datasets.ipynb
+++ b/site/notebooks/how_to/run_tests_that_require_multiple_datasets.ipynb
@@ -18,36 +18,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Contents\n",
-    "- [About ValidMind](#toc1_)    \n",
-    "  - [Before you begin](#toc1_1_)    \n",
-    "  - [New to ValidMind?](#toc1_2_)    \n",
-    "  - [Key concepts](#toc1_3_)    \n",
-    "- [Install the ValidMind Library](#toc2_)    \n",
-    "- [Initialize the ValidMind Library](#toc3_)  \n",
-    "  - [Get your code snippet](#toc3_1_)      \n",
-    "  - [Preview the documentation template](#toc3_2_)    \n",
-    "- [Load the sample dataset](#toc4_)    \n",
-    "- [Prepocess the raw dataset](#toc5_)    \n",
-    "- [Train models for testing](#toc6_)    \n",
-    "- [Initialize ValidMind objects](#toc7_)    \n",
-    "  - [Initialize the ValidMind model](#toc7_1_)    \n",
-    "  - [Initialize the ValidMind datasets](#toc7_2_)    \n",
-    "- [Run a test that requires multiple datasets](#toc8_)    \n",
-    "  - [Run predictions and link with the model](#toc8_1_)    \n",
-    "  - [Run test](#toc8_2_)    \n",
-    "- [Next steps](#toc9_)    \n",
-    "  - [Work with your model documentation](#toc9_1_)    \n",
-    "  - [Discover more learning resources](#toc9_2_)\n",
-    "- [Upgrade ValidMind](#toc10_)    \n",
+    "::: {.content-hidden when-format=\"html\"}\n",
+    "## Contents    \n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
+    "  - [Preview the documentation template](#toc2_3__)    \n",
+    "- [Load the sample dataset](#toc3__)    \n",
+    "- [Prepocess the raw dataset](#toc4__)    \n",
+    "- [Train models for testing](#toc5__)    \n",
+    "- [Initialize ValidMind objects](#toc6__)    \n",
+    "  - [Initialize the ValidMind model](#toc6_1__)    \n",
+    "  - [Initialize the ValidMind datasets](#toc6_2__)    \n",
+    "- [Run a test that requires multiple datasets](#toc7__)    \n",
+    "  - [Run predictions and link with the model](#toc7_1__)    \n",
+    "  - [Run test](#toc7_2__)    \n",
+    "- [Next steps](#toc8__)    \n",
+    "  - [Work with your model documentation](#toc8_1__)    \n",
+    "  - [Discover more learning resources](#toc8_2__)    \n",
+    "- [Upgrade ValidMind](#toc9__)    \n",
     "\n",
-    "<!-- vscode-jupyter-toc-config\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
     "\tanchor=true\n",
     "\tflat=false\n",
     "\tminLevel=2\n",
     "\tmaxLevel=4\n",
-    "\t/vscode-jupyter-toc-config -->\n",
+    "\t/jn-toc-notebook-config -->\n",
     "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
@@ -55,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
@@ -63,7 +68,7 @@
     "\n",
     "You use the ValidMind Library to automate documentation and validation tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
     "\n",
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -71,7 +76,7 @@
     "\n",
     "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n",
     "\n",
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -81,7 +86,7 @@
     "<br></br>\n",
     "<a href=\"https://docs.validmind.ai/guide/configuration/register-with-validmind.html\" style=\"color: #DE257E;\"><b>Register with ValidMind</b></a></div>\n",
     "\n",
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -108,18 +113,27 @@
     "\n",
     "**Test suites**: Collections of tests designed to run together to automate and generate model documentation end-to-end for specific use-cases.\n",
     "\n",
-    "Example: the [`classifier_full_suite`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html#ClassifierFullSuite) test suite runs tests from the [`tabular_dataset`](https://docs.validmind.ai/validmind/validmind/test_suites/tabular_datasets.html) and [`classifier`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html) test suites to fully document the data and model sections for binary classification model use-cases.\n"
+    "Example: the [`classifier_full_suite`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html#ClassifierFullSuite) test suite runs tests from the [`tabular_dataset`](https://docs.validmind.ai/validmind/validmind/test_suites/tabular_datasets.html) and [`classifier`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html) test suites to fully document the data and model sections for binary classification model use-cases."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
-    "## Install the ValidMind Library\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_1__'></a>\n",
     "\n",
-    "To install the library:\n"
+    "### Install the ValidMind Library\n",
+    "\n",
+    "To install the library:"
    ]
   },
   {
@@ -135,32 +149,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
-    "## Initialize the ValidMind Library\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "#### Register sample model\n",
     "\n",
-    "<a id='toc3_1_'></a>\n",
-    "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
     "\n",
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:\n"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -190,13 +235,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_2_'></a>\n",
+    "<a id='toc2_3__'></a>\n",
     "\n",
     "### Preview the documentation template\n",
     "\n",
-    "A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model.\n",
     "\n",
-    "You will upload documentation and test results into this template later on. For now, take a look at the structure that the template provides with the `vm.preview_template()` function from the ValidMind library and note the empty sections:\n"
+    "You will upload documentation and test results unique to your model based on this template later on. For now, **take a look at the default structure that the template provides with [the `vm.preview_template()` function](https://docs.validmind.ai/validmind/validmind.html#preview_template)** from the ValidMind library and note the empty sections:"
    ]
   },
   {
@@ -212,11 +257,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## Load the sample dataset\n",
     "\n",
-    "The sample dataset used here is provided by the ValidMind library. To be able to use it, you need to import the dataset and load it into a pandas [DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html), a two-dimensional tabular data structure that makes use of rows and columns:\n"
+    "The sample dataset used here is provided by the ValidMind library. To be able to use it, you need to import the dataset and load it into a pandas [DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html), a two-dimensional tabular data structure that makes use of rows and columns:"
    ]
   },
   {
@@ -241,14 +286,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Prepocess the raw dataset\n",
     "\n",
     "Preprocessing performs a number of operations to get ready for the subsequent steps:\n",
     "\n",
     "- Preprocess the data: Splits the DataFrame (`df`) into multiple datasets (`train_df`, `validation_df`, and `test_df`) using `demo_dataset.preprocess` to simplify preprocessing.\n",
-    "- Separate features and targets: Drops the target column to create feature sets (`x_train`, `x_val`) and target sets (`y_train`, `y_val`).\n"
+    "- Separate features and targets: Drops the target column to create feature sets (`x_train`, `x_val`) and target sets (`y_train`, `y_val`)."
    ]
   },
   {
@@ -268,11 +313,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Train models for testing\n",
     "\n",
-    "Initialize XGBoost and Logistic Regression Classifiers\n"
+    "Initialize XGBoost and Logistic Regression Classifiers"
    ]
   },
   {
@@ -302,13 +347,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Initialize ValidMind objects\n",
     "\n",
-    "<a id='toc7_1_'></a>\n",
+    "<a id='toc6_1__'></a>\n",
     "\n",
-    "### Initialize the ValidMind model\n"
+    "### Initialize the ValidMind model"
    ]
   },
   {
@@ -327,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_2_'></a>\n",
+    "<a id='toc6_2__'></a>\n",
     "\n",
     "### Initialize the ValidMind datasets\n",
     "\n",
@@ -340,7 +385,7 @@
     "- `target_column` — a required argument if tests require access to true values. This is the name of the target column in the dataset\n",
     "- `class_labels` — an optional value to map predicted classes to class labels\n",
     "\n",
-    "With all datasets ready, you can now initialize the raw, training and test datasets (`raw_df`, `train_df` and `test_df`) created earlier into their own dataset objects using [`vm.init_dataset()`](https://docs.validmind.ai/validmind/validmind.html#init_dataset):\n"
+    "With all datasets ready, you can now initialize the raw, training and test datasets (`raw_df`, `train_df` and `test_df`) created earlier into their own dataset objects using [`vm.init_dataset()`](https://docs.validmind.ai/validmind/validmind.html#init_dataset):"
    ]
   },
   {
@@ -363,23 +408,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Run a test that requires multiple datasets\n",
     "\n",
     "We are going to show the following in next two blocks:\n",
     "\n",
     "- Assign predictions for `vm_train_ds` and `vm_test_ds`\n",
-    "- Run `RobustnessDiagnosis` which is one example test that takes two input datasets\n"
+    "- Run `RobustnessDiagnosis` which is one example test that takes two input datasets"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_1_'></a>\n",
+    "<a id='toc7_1__'></a>\n",
     "\n",
-    "### Run predictions and link with the model\n"
+    "### Run predictions and link with the model"
    ]
   },
   {
@@ -396,9 +441,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_2_'></a>\n",
+    "<a id='toc7_2__'></a>\n",
     "\n",
-    "### Run test\n"
+    "### Run test"
    ]
   },
   {
@@ -417,13 +462,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_'></a>\n",
+    "<a id='toc8__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
     "You can look at the results of this test suite right in the notebook where you ran the code, as you would expect. But there is a better way — use the ValidMind Platform to work with your model documentation.\n",
     "\n",
-    "<a id='toc9_1_'></a>\n",
+    "<a id='toc8_1__'></a>\n",
     "\n",
     "### Work with your model documentation\n",
     "\n",
@@ -433,7 +478,7 @@
     "\n",
     "What you see is the full draft of your model documentation in a more easily consumable version. From here, you can make qualitative edits to model documentation, view guidelines, collaborate with validators, and submit your model documentation for approval when it's ready. [Learn more ...](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html)\n",
     "\n",
-    "<a id='toc9_2_'></a>\n",
+    "<a id='toc8_2__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -449,7 +494,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc10_'></a>\n",
+    "<a id='toc9__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
