--- a/site/notebooks/how_to/use_dataset_model_objects.ipynb
+++ b/site/notebooks/how_to/use_dataset_model_objects.ipynb
@@ -17,43 +17,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Contents\n",
-    "- [About ValidMind](#toc1_)    \n",
-    "  - [Before you begin](#toc1_1_)    \n",
-    "  - [New to ValidMind?](#toc1_2_)    \n",
-    "  - [Key concepts](#toc1_3_)    \n",
-    "- [Install the ValidMind Library](#toc2_)    \n",
-    "- [Initialize the ValidMind Library](#toc3_)   \n",
-    "  - [Get your code snippet](#toc3_1_)    \n",
-    "  <!-- - [Preview the documentation template](#toc3_1_)     -->\n",
-    "- [Load the demo dataset](#toc4_)    \n",
-    "  - [Prepocess the raw dataset](#toc4_1_)    \n",
-    "- [Train a model for testing](#toc5_)    \n",
-    "- [Explore basic components of the ValidMind library](#toc6_)    \n",
-    "  - [VMDataset Object](#toc6_1_)\n",
-    "    - [Initialize the ValidMind datasets](#toc6_1_1_)\n",
-    "    - [Interfaces of the dataset object](#toc6_1_2_)\n",
-    "    - [Using VM Dataset object as arguments in Custom tests](#toc6_1_3_)\n",
-    "    - [Using VM Dataset object and parameters as arguments in Custom tests](#toc6_1_4_)  \n",
-    "  - [VMModel Object](#toc6_2_)\n",
-    "    - [Initialize ValidMind model object](#toc6_2_1_)\n",
-    "    - [Assign predictions to the datasets](#toc6_2_2_)    \n",
-    "    - [Using VM Model and Dataset objects as arguments in Custom tests](#toc6_2_3_)\n",
-    "  - [Log the test results](#toc6_4_)\n",
-    "- [Where to go from here](#toc7_)\n",
-    "  - [Use cases](#toc7_1_)\n",
-    "  - [More how-to guides and code samples](#toc7_2_)\n",
-    "  - [Discover more learning resources](#toc7_3_)\n",
-    "- [Upgrade ValidMind](#toc8_)\n",
+    "::: {.content-hidden when-format=\"html\"}\n",
+    "## Contents    \n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
+    "- [Load the demo dataset](#toc3__)    \n",
+    "  - [Prepocess the raw dataset](#toc3_1__)    \n",
+    "- [Train a model for testing](#toc4__)    \n",
+    "- [Explore basic components of the ValidMind library](#toc5__)    \n",
+    "  - [VMDataset Object](#toc5_1__)    \n",
+    "    - [Initialize the ValidMind datasets](#toc5_1_1__)    \n",
+    "    - [ Interfaces of the dataset object](#toc5_1_2__)    \n",
+    "  - [Using VM Dataset object as arguments in custom tests](#toc5_2__)    \n",
+    "    - [Run the test](#toc5_2_1__)    \n",
+    "  - [Using VM Dataset object and parameters as arguments in custom tests](#toc5_3__)    \n",
+    "  - [VMModel Object](#toc5_4__)    \n",
+    "  - [Initialize ValidMind model object](#toc5_5__)    \n",
+    "  - [Assign predictions to the datasets](#toc5_6__)    \n",
+    "  - [Using VM Model and Dataset objects as arguments in Custom tests](#toc5_7__)    \n",
+    "  - [Log the test results](#toc5_8__)    \n",
+    "- [Where to go from here](#toc6__)    \n",
+    "  - [Use cases](#toc6_1__)    \n",
+    "  - [More how-to guides and code samples](#toc6_2__)    \n",
+    "  - [Discover more learning resources](#toc6_3__)    \n",
+    "- [Upgrade ValidMind](#toc7__)    \n",
     "\n",
-    "\n",
-    "<!-- vscode-jupyter-toc-config\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
     "\tanchor=true\n",
     "\tflat=false\n",
     "\tminLevel=2\n",
     "\tmaxLevel=4\n",
-    "\t/vscode-jupyter-toc-config -->\n",
+    "\t/jn-toc-notebook-config -->\n",
     "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
@@ -61,13 +65,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
     "ValidMind is a suite of tools for managing model risk, including risk associated with AI and statistical models. You use the ValidMind Library to automate documentation and validation tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
     "\n",
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -75,7 +79,7 @@
     "\n",
     "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n",
     "\n",
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -85,7 +89,7 @@
     "<br></br>\n",
     "<a href=\"https://docs.validmind.ai/guide/configuration/register-with-validmind.html\" style=\"color: #DE257E;\"><b>Register with ValidMind</b></a></div>\n",
     "\n",
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -121,23 +125,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
-    "## Install the ValidMind Library\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_1__'></a>\n",
+    "\n",
+    "### Install the ValidMind Library\n",
     "\n",
     "Please note the following recommended Python versions to use:\n",
     "\n",
     "- Python 3.7 > x <= 3.11\n",
     "\n",
-    "To install the library:\n"
+    "To install the library:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "metadata": {}
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%pip install -q validmind"
@@ -147,32 +158,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
-    "## Initialize the ValidMind Library\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "#### Register sample model\n",
     "\n",
-    "<a id='toc3_1_'></a>\n",
-    "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
     "\n",
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -215,9 +257,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
-    "## Load the demo dataset\n"
+    "## Load the demo dataset"
    ]
   },
   {
@@ -235,9 +277,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_1_'></a>\n",
+    "<a id='toc3_1__'></a>\n",
     "\n",
-    "### Prepocess the raw dataset\n"
+    "### Prepocess the raw dataset"
    ]
   },
   {
@@ -253,11 +295,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Train a model for testing\n",
     "\n",
-    "We train a simple customer churn model for our test.\n"
+    "We train a simple customer churn model for our test."
    ]
   },
   {
@@ -287,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Explore basic components of the ValidMind library\n",
     "\n",
@@ -302,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_'></a>\n",
+    "<a id='toc5_1__'></a>\n",
     "\n",
     "### VMDataset Object"
    ]
@@ -311,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_1_'></a>\n",
+    "<a id='toc5_1_1__'></a>\n",
     "\n",
     "#### Initialize the ValidMind datasets\n",
     "\n",
@@ -325,15 +367,13 @@
     "- `input_id` - a unique identifier that allows tracking what inputs are used when running each individual test\n",
     "- `target_column` — a required argument if tests require access to true values. This is the name of the target column in the dataset\n",
     "\n",
-    "The detailed list of the arguments can be found [here](https://docs.validmind.ai/validmind/validmind.html#init_dataset) \n"
+    "The detailed list of the arguments can be found [here](https://docs.validmind.ai/validmind/validmind.html#init_dataset) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "metadata": {}
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# vm_raw_dataset is now a VMDataset object that you can pass to any ValidMind test\n",
@@ -365,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_2_'></a>\n",
+    "<a id='toc5_1_2__'></a>\n",
     "\n",
     "####  Interfaces of the dataset object\n",
     "\n",
@@ -488,7 +528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_3_'></a>\n",
+    "<a id='toc5_2__'></a>\n",
     "\n",
     "### Using VM Dataset object as arguments in custom tests\n",
     "\n",
@@ -540,9 +580,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc5_2_1__'></a>\n",
+    "\n",
     "#### Run the test\n",
     "\n",
-    "Let's run the test using the `run_test` method, which is part of the `validmind.tests` module. Here, we pass the `dataset` through the `inputs`. Similarly, you can pass `datasets`, `model`, or `models` as inputs if your custom test requires them. In this example below, we run the custom test `my_custom_tests.ClassImbalance` by passing the `dataset` through the `inputs`. \n"
+    "Let's run the test using the `run_test` method, which is part of the `validmind.tests` module. Here, we pass the `dataset` through the `inputs`. Similarly, you can pass `datasets`, `model`, or `models` as inputs if your custom test requires them. In this example below, we run the custom test `my_custom_tests.ClassImbalance` by passing the `dataset` through the `inputs`. "
    ]
   },
   {
@@ -571,12 +613,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_4_'></a>\n",
+    "<a id='toc5_3__'></a>\n",
     "\n",
     "### Using VM Dataset object and parameters as arguments in custom tests\n",
     "\n",
     "Simlilar to `inputs`, you can pass `params` to a custom test by providing a dictionary of parameters to the `run_test()` function. The parameters will override any default parameters set in the custom test definition. Note that the `dataset` is still passed as `inputs`. \n",
-    "Let's modify the class imbalance test so that it provides flexibility to `normalize` the results.\n"
+    "Let's modify the class imbalance test so that it provides flexibility to `normalize` the results."
    ]
   },
   {
@@ -639,16 +681,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_2_'></a>\n",
+    "<a id='toc5_4__'></a>\n",
     "\n",
-    "### VMModel Object\n"
+    "### VMModel Object"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_2_1_'></a>\n",
+    "<a id='toc5_5__'></a>\n",
     "\n",
     "### Initialize ValidMind model object\n",
     "\n",
@@ -695,11 +737,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_2_2_'></a>\n",
+    "<a id='toc5_6__'></a>\n",
     "\n",
     "### Assign predictions to the datasets\n",
     "\n",
-    "We can now use the `assign_predictions()` method from the `Dataset` object to link existing predictions to any model. If no prediction values are passed, the method will compute predictions automatically:\n"
+    "We can now use the `assign_predictions()` method from the `Dataset` object to link existing predictions to any model. If no prediction values are passed, the method will compute predictions automatically:"
    ]
   },
   {
@@ -738,7 +780,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_2_3_'></a>\n",
+    "<a id='toc5_7__'></a>\n",
+    "\n",
     "### Using VM Model and Dataset objects as arguments in Custom tests\n",
     "\n",
     "We will now create a `@vm.test` wrapper that will allow you to create a reusable test. Note the following changes in the code below:\n",
@@ -751,7 +794,7 @@
     "- The function then returns the `ConfusionMatrixDisplay.figure_` object - this is important as the ValidMind Library expects the output of the custom test to be a plot or a table.\n",
     "- The `@vm.test` decorator is doing the work of creating a wrapper around the function that will allow it to be run by the ValidMind Library. It also registers the test so it can be found by the ID `my_custom_tests.ConfusionMatrix` (see the section below on how test IDs work in ValidMind and why this format is important)\n",
     "\n",
-    "Similarly, you can use the functinality provided by `VMDataset` and `VMModel` objects. You can refer our documentation page for all the avalialble APIs [here](https://docs.validmind.ai/validmind/validmind.html#init_dataset)\n"
+    "Similarly, you can use the functinality provided by `VMDataset` and `VMModel` objects. You can refer our documentation page for all the avalialble APIs [here](https://docs.validmind.ai/validmind/validmind.html#init_dataset)"
    ]
   },
   {
@@ -818,7 +861,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_4_'></a>\n",
+    "<a id='toc5_8__'></a>\n",
     "\n",
     "### Log the test results\n",
     "\n",
@@ -830,9 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "metadata": {}
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "result.log()"
@@ -842,7 +883,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Where to go from here\n",
     "\n",
@@ -855,7 +896,7 @@
     "\n",
     "As a next step, you can explore the following notebooks to get a deeper understanding on how the ValidMind Library allows you generate model documentation for any use case:\n",
     "\n",
-    "<a id='toc7_1_'></a>\n",
+    "<a id='toc6_1__'></a>\n",
     "\n",
     "### Use cases\n",
     "\n",
@@ -863,7 +904,7 @@
     "- [Linear regression documentation demo](../code_samples/regression/quickstart_regression_full_suite.ipynb)\n",
     "- [LLM model documentation demo](../code_samples/nlp_and_llm/foundation_models_integration_demo.ipynb)\n",
     "\n",
-    "<a id='toc7_2_'></a>\n",
+    "<a id='toc6_2__'></a>\n",
     "\n",
     "### More how-to guides and code samples\n",
     "\n",
@@ -873,21 +914,21 @@
     "- [Configuring dataset features](../how_to/configure_dataset_features.ipynb)\n",
     "- [Introduction to unit and composite tests](../how_to/run_unit_metrics.ipynb)\n",
     "\n",
-    "<a id='toc7_3_'></a>\n",
+    "<a id='toc6_3__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
     "All notebook samples can be found in the following directories of the ValidMind Library GitHub repository:\n",
     "\n",
     "- [Code samples](https://github.com/validmind/validmind-library/tree/main/notebooks/code_samples)\n",
-    "- [How-to guides](https://github.com/validmind/validmind-library/tree/main/notebooks/how_to)\n"
+    "- [How-to guides](https://github.com/validmind/validmind-library/tree/main/notebooks/how_to)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
