--- a/site/notebooks/code_samples/custom_tests/implement_custom_tests.ipynb
+++ b/site/notebooks/code_samples/custom_tests/implement_custom_tests.ipynb
@@ -10,49 +10,51 @@
     "\n",
     "ValidMind provides a comprehensive set of tests out-of-the-box to evaluate and document your models and datasets. We recognize there will be cases where the default tests do not support a model or dataset, or specific documentation is needed. In these cases, you can create and use your own custom code to accomplish what you need. To streamline custom code integration, we support the creation of custom test functions.\n",
     "\n",
-    "This interactive notebook provides a step-by-step guide for implementing and registering custom tests with ValidMind, running them individually, viewing the results on the ValidMind Platform, and incorporating them into your model documentation template.\n"
+    "This interactive notebook provides a step-by-step guide for implementing and registering custom tests with ValidMind, running them individually, viewing the results on the ValidMind Platform, and incorporating them into your model documentation template."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Contents \n",
-    "- [About ValidMind](#toc2_)    \n",
-    "  - [Before you begin](#toc2_1_)    \n",
-    "  - [New to ValidMind?](#toc2_2_)    \n",
-    "  - [Key concepts](#toc2_3_)    \n",
-    "- [Before you begin](#toc3_)    \n",
-    "  - [New to ValidMind?](#toc3_1_)    \n",
-    "- [Install the ValidMind Library](#toc4_)    \n",
-    "- [Initialize the ValidMind Library](#toc5_)    \n",
-    "  - [Get your code snippet](#toc5_1_) \n",
-    "- [Implement a Custom Test](#toc6_)    \n",
-    "- [Run the Custom Test](#toc7_)    \n",
-    "  - [Setup the Model and Dataset](#toc7_1_)    \n",
-    "  - [Run the Custom Test](#toc7_2_)    \n",
-    "- [Adding Custom Tests to Model Documentation](#toc8_)    \n",
-    "- [Some More Custom Tests](#toc9_)    \n",
-    "  - [Custom Test: Table of Model Hyperparameters](#toc9_1_)    \n",
-    "  - [Custom Test: External API Call](#toc9_2_)    \n",
-    "  - [Custom Test: Passing Parameters](#toc9_3_)    \n",
-    "  - [Custom Test: Multiple Tables and Plots in a Single Test](#toc9_4_)    \n",
-    "  - [Custom Test: Images](#toc9_5_)\n",
-    "  - [Custom Test: Description](#toc9_6_)\n",
+    "::: {.content-hidden when-format=\"html\"}\n",
+    "## Contents    \n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
+    "- [Implement a Custom Test](#toc3__)    \n",
+    "- [Run the Custom Test](#toc4__)    \n",
+    "  - [Setup the Model and Dataset](#toc4_1__)    \n",
+    "  - [Run the Custom Test](#toc4_2__)    \n",
+    "- [Adding Custom Test to Model Documentation](#toc5__)    \n",
+    "- [Some More Custom Tests](#toc6__)    \n",
+    "  - [Custom Test: Table of Model Hyperparameters](#toc6_1__)    \n",
+    "  - [Custom Test: External API Call](#toc6_2__)    \n",
+    "  - [Custom Test: Passing Parameters](#toc6_3__)    \n",
+    "  - [Custom Test: Multiple Tables and Plots in a Single Test](#toc6_4__)    \n",
+    "  - [Custom Test: Images](#toc6_5__)    \n",
+    "  - [Custom Test: Description](#toc6_6__)    \n",
+    "- [Conclusion](#toc7__)    \n",
+    "- [Next steps](#toc8__)    \n",
+    "  - [Work with your model documentation](#toc8_1__)    \n",
+    "  - [Discover more learning resources](#toc8_2__)    \n",
+    "- [Upgrade ValidMind](#toc9__)    \n",
     "\n",
-    "- [Conclusion](#toc10_)    \n",
-    "- [Next steps](#toc11_)    \n",
-    "  - [Work with your model documentation](#toc11_1_)    \n",
-    "  - [Discover more learning resources](#toc11_2_)    \n",
-    "- [Upgrade ValidMind](#toc12_)\n",
-    "\n",
-    "<!-- vscode-jupyter-toc-config\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
     "\tanchor=true\n",
     "\tflat=false\n",
     "\tminLevel=2\n",
     "\tmaxLevel=4\n",
-    "\t/vscode-jupyter-toc-config -->\n",
+    "\t/jn-toc-notebook-config -->\n",
     "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
@@ -60,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
@@ -68,7 +70,7 @@
     "\n",
     "You use the ValidMind Library to automate documentation and validation tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
     "\n",
-    "<a id='toc2_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -76,7 +78,7 @@
     "\n",
     "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n",
     "\n",
-    "<a id='toc2_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -86,7 +88,7 @@
     "<br></br>\n",
     "<a href=\"https://docs.validmind.ai/guide/configuration/register-with-validmind.html\" style=\"color: #DE257E;\"><b>Register with ValidMind</b></a></div>\n",
     "\n",
-    "<a id='toc2_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -111,16 +113,25 @@
     "\n",
     "**Test suites**: Collections of tests designed to run together to automate and generate model documentation end-to-end for specific use-cases.\n",
     "\n",
-    "Example: the [`classifier_full_suite`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html#ClassifierFullSuite) test suite runs tests from the [`tabular_dataset`](https://docs.validmind.ai/validmind/validmind/test_suites/tabular_datasets.html) and [`classifier`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html) test suites to fully document the data and model sections for binary classification model use-cases.\n"
+    "Example: the [`classifier_full_suite`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html#ClassifierFullSuite) test suite runs tests from the [`tabular_dataset`](https://docs.validmind.ai/validmind/validmind/test_suites/tabular_datasets.html) and [`classifier`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html) test suites to fully document the data and model sections for binary classification model use-cases."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
-    "## Install the ValidMind Library\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_1__'></a>\n",
+    "\n",
+    "### Install the ValidMind Library\n",
     "\n",
     "To install the library:"
    ]
@@ -138,32 +149,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
-    "## Initialize the ValidMind Library\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "#### Register sample model\n",
     "\n",
-    "<a id='toc5_1_'></a>\n",
-    "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `{use-case}`\n",
     "\n",
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:\n"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -193,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## Implement a Custom Test\n",
     "\n",
@@ -202,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Run the Custom Test\n",
     "\n",
@@ -266,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Setup the Model and Dataset\n",
     "\n",
@@ -332,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_2_'></a>\n",
+    "<a id='toc4_2__'></a>\n",
     "\n",
     "### Run the Custom Test\n",
     "\n",
@@ -364,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Adding Custom Test to Model Documentation\n",
     "\n",
@@ -397,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Some More Custom Tests\n",
     "\n",
@@ -507,7 +549,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_1_'></a>\n",
+    "<a id='toc6_1__'></a>\n",
     "\n",
     "### Custom Test: Table of Model Hyperparameters\n",
     "\n",
@@ -555,7 +597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_2_'></a>\n",
+    "<a id='toc6_2__'></a>\n",
     "\n",
     "### Custom Test: External API Call\n",
     "\n",
@@ -633,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_3_'></a>\n",
+    "<a id='toc6_3__'></a>\n",
     "\n",
     "### Custom Test: Passing Parameters\n",
     "\n",
@@ -723,7 +765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_4_'></a>\n",
+    "<a id='toc6_4__'></a>\n",
     "\n",
     "### Custom Test: Multiple Tables and Plots in a Single Test\n",
     "\n",
@@ -782,7 +824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_5_'></a>\n",
+    "<a id='toc6_5__'></a>\n",
     "\n",
     "### Custom Test: Images\n",
     "\n",
@@ -873,7 +915,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_6_'></a>\n",
+    "<a id='toc6_6__'></a>\n",
     "\n",
     "### Custom Test: Description\n",
     "\n",
@@ -882,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +975,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc10_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Conclusion\n",
     "\n",
@@ -944,13 +986,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc11_'></a>\n",
+    "<a id='toc8__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
     "You can look at the results of this test suite right in the notebook where you ran the code, as you would expect. But there is a better way — use the ValidMind Platform to work with your model documentation.\n",
     "\n",
-    "<a id='toc11_1_'></a>\n",
+    "<a id='toc8_1__'></a>\n",
     "\n",
     "### Work with your model documentation\n",
     "\n",
@@ -960,7 +1002,7 @@
     "\n",
     "What you see is the full draft of your model documentation in a more easily consumable version. From here, you can make qualitative edits to model documentation, view guidelines, collaborate with validators, and submit your model documentation for approval when it's ready. [Learn more ...](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html)\n",
     "\n",
-    "<a id='toc11_2_'></a>\n",
+    "<a id='toc8_2__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -976,7 +1018,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc12_'></a>\n",
+    "<a id='toc9__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
