--- a/site/notebooks/code_samples/custom_tests/integrate_external_test_providers.ipynb
+++ b/site/notebooks/code_samples/custom_tests/integrate_external_test_providers.ipynb
@@ -19,40 +19,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "::: {.content-hidden when-format=\"html\"}\n",
     "## Contents    \n",
-    "- [Prerequisites](#toc1_)    \n",
-    "- [Key concepts](#toc2_)    \n",
-    "- [High-level steps](#toc3_)    \n",
-    "- [About ValidMind](#toc4_)    \n",
-    "  - [Before you begin](#toc4_1_)    \n",
-    "  - [New to ValidMind?](#toc4_2_)    \n",
-    "- [Install the ValidMind Library](#toc5_)    \n",
-    "- [Initialize the ValidMind Library](#toc6_)    \n",
-    "  - [Get your code snippet](#toc6_1_) \n",
-    "- [Set up custom tests](#toc7_)    \n",
-    "- [Registering the test provider](#toc8_)    \n",
-    "  - [Test providers overview](#toc8_1_)    \n",
-    "  - [Local test provider](#toc8_2_)    \n",
-    "  - [Running test provider tests](#toc8_3_)    \n",
-    "    - [Set up the model and dataset](#toc8_3_1_)    \n",
-    "    - [Run the tests](#toc8_3_2_)    \n",
-    "    - [Add custom tests to model documentation](#toc8_3_3_)    \n",
-    "    - [Run, save, and add other tests](#toc8_3_4_)    \n",
-    "  - [Verify that `preview_template()` now loads the tests from the test providers](#toc8_4_)    \n",
-    "  - [Run the documentation tests](#toc8_5_)    \n",
-    "- [Conclusion](#toc9_)    \n",
-    "- [Next steps](#toc10_)    \n",
-    "  - [Work with your model documentation](#toc10_1_)    \n",
-    "  - [Discover more learning resources](#toc10_2_)  \n",
-    "- [Upgrade ValidMind](#toc11_)  \n",
+    "- [Prerequisites](#toc1__)    \n",
+    "- [Key concepts](#toc2__)    \n",
+    "- [High-level steps](#toc3__)    \n",
+    "- [About ValidMind](#toc4__)    \n",
+    "  - [Before you begin](#toc4_1__)    \n",
+    "- [Setting up](#toc5__)    \n",
+    "  - [Install the ValidMind Library](#toc5_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc5_2__)    \n",
+    "    - [Register sample model](#toc5_2_1__)    \n",
+    "    - [Apply documentation template](#toc5_2_2__)    \n",
+    "    - [Get your code snippet](#toc5_2_3__)    \n",
+    "- [Set up custom tests](#toc6__)    \n",
+    "- [Registering the test provider](#toc7__)    \n",
+    "  - [Test providers overview](#toc7_1__)    \n",
+    "  - [Local test provider](#toc7_2__)    \n",
+    "  - [Running test provider tests](#toc7_3__)    \n",
+    "    - [Set up the model and dataset](#toc7_3_1__)    \n",
+    "    - [Run the tests](#toc7_3_2__)    \n",
+    "    - [Add custom tests to model documentation](#toc7_3_3__)    \n",
+    "    - [Run, save, and add other tests](#toc7_3_4__)    \n",
+    "  - [Verify that `preview_template()` now loads the tests from the test providers](#toc7_4__)    \n",
+    "  - [Run the documentation tests](#toc7_5__)    \n",
+    "- [Conclusion](#toc8__)    \n",
+    "- [Next steps](#toc9__)    \n",
+    "  - [Work with your model documentation](#toc9_1__)    \n",
+    "  - [Discover more learning resources](#toc9_2__)    \n",
+    "- [Upgrade ValidMind](#toc10__)    \n",
     "\n",
-    "<!-- vscode-jupyter-toc-config\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
     "\tanchor=true\n",
     "\tflat=false\n",
     "\tminLevel=2\n",
     "\tmaxLevel=4\n",
-    "\t/vscode-jupyter-toc-config -->\n",
+    "\t/jn-toc-notebook-config -->\n",
     "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
@@ -60,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## Prerequisites\n",
     "\n",
@@ -73,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
     "## Key concepts\n",
     "\n",
@@ -90,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## High-level steps\n",
     "\n",
@@ -105,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
@@ -116,7 +120,7 @@
     "- [Get started](https://docs.validmind.ai/get-started/get-started.html) — The basics, including key concepts, and how our products work\n",
     "- [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html) — The path for developers, more code samples, and our developer reference\n",
     "\n",
-    "<a id='toc4_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -129,11 +133,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
-    "## Install the ValidMind Library\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc5_1__'></a>\n",
     "\n",
-    "To install the library:\n"
+    "### Install the ValidMind Library\n",
+    "\n",
+    "To install the library:"
    ]
   },
   {
@@ -149,32 +162,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc5_2__'></a>\n",
     "\n",
-    "## Initialize the ValidMind Library\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc5_2_1__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "#### Register sample model\n",
     "\n",
-    "<a id='toc6_1_'></a>\n",
-    "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
     "\n",
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc5_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:\n"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc5_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -204,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Set up custom tests\n",
     "\n",
@@ -506,7 +550,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Registering the test provider"
    ]
@@ -515,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_1_'></a>\n",
+    "<a id='toc7_1__'></a>\n",
     "\n",
     "### Test providers overview\n",
     "\n",
@@ -546,7 +590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_2_'></a>\n",
+    "<a id='toc7_2__'></a>\n",
     "\n",
     "### Local test provider\n",
     "\n",
@@ -576,7 +620,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_3_'></a>\n",
+    "<a id='toc7_3__'></a>\n",
     "\n",
     "### Running test provider tests\n",
     "\n",
@@ -589,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_3_1_'></a>\n",
+    "<a id='toc7_3_1__'></a>\n",
     "\n",
     "#### Set up the model and dataset\n",
     "\n",
@@ -665,7 +709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_3_2_'></a>\n",
+    "<a id='toc7_3_2__'></a>\n",
     "\n",
     "#### Run the tests\n",
     "\n",
@@ -708,7 +752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_3_3_'></a>\n",
+    "<a id='toc7_3_3__'></a>\n",
     "\n",
     "#### Add custom tests to model documentation\n",
     "\n",
@@ -732,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_3_4_'></a>\n",
+    "<a id='toc7_3_4__'></a>\n",
     "\n",
     "#### Run, save, and add other tests\n",
     "\n",
@@ -772,7 +816,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_4_'></a>\n",
+    "<a id='toc7_4__'></a>\n",
     "\n",
     "### Verify that `preview_template()` now loads the tests from the test providers\n",
     "\n",
@@ -810,7 +854,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_5_'></a>\n",
+    "<a id='toc7_5__'></a>\n",
     "\n",
     "### Run the documentation tests\n",
     "\n",
@@ -831,7 +875,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_'></a>\n",
+    "<a id='toc8__'></a>\n",
     "\n",
     "## Conclusion\n",
     "\n",
@@ -842,13 +886,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc10_'></a>\n",
+    "<a id='toc9__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
     "You can look at the results of this test suite right in the notebook where you ran the code, as you would expect. But there is a better way — use the ValidMind Platform to work with your model documentation.\n",
     "\n",
-    "<a id='toc10_1_'></a>\n",
+    "<a id='toc9_1__'></a>\n",
     "\n",
     "### Work with your model documentation\n",
     "\n",
@@ -858,7 +902,7 @@
     "\n",
     "What you see is the full draft of your model documentation in a more easily consumable version. From here, you can make qualitative edits to model documentation, view guidelines, collaborate with validators, and submit your model documentation for approval when it's ready. [Learn more ...](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html)\n",
     "\n",
-    "<a id='toc10_2_'></a>\n",
+    "<a id='toc9_2__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -874,7 +918,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc11_'></a>\n",
+    "<a id='toc10__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
