--- a/site/notebooks/code_samples/nlp_and_llm/hugging_face_integration_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/hugging_face_integration_demo.ipynb
@@ -8,13 +8,51 @@
     "\n",
     "Document a natural language processing (NLP) model using the ValidMind Library after performing a sentiment analysis of financial news data using several different Hugging Face transformers.\n",
     "\n",
-    "This notebook provides an introduction for model developers on how to document a natural language processing (NLP) model using the ValidMind Library. It shows you how to set up the ValidMind Library, initialize the library, and load the dataset, followed by performing a sentiment analysis of financial news data using several different Hugging Face transformers. As part of the process, the notebook runs various tests to quickly generate documentation about the data and model.\n"
+    "This notebook provides an introduction for model developers on how to document a natural language processing (NLP) model using the ValidMind Library. It shows you how to set up the ValidMind Library, initialize the library, and load the dataset, followed by performing a sentiment analysis of financial news data using several different Hugging Face transformers. As part of the process, the notebook runs various tests to quickly generate documentation about the data and model."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "::: {.content-hidden when-format=\"html\"}\n",
+    "## Contents    \n",
+    "- [About ValidMind](#toc1__)    \n",
+    "- [Before you begin](#toc2__)    \n",
+    "- [Setting up](#toc3__)    \n",
+    "  - [Install the ValidMind Library](#toc3_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc3_2__)    \n",
+    "    - [Register sample model](#toc3_2_1__)    \n",
+    "    - [Apply documentation template](#toc3_2_2__)    \n",
+    "    - [Get your code snippet](#toc3_2_3__)    \n",
+    "  - [Preview the documentation template](#toc3_3__)    \n",
+    "  - [Get your sample dataset ready for analysis](#toc3_4__)    \n",
+    "- [NLP data quality tests](#toc4__)    \n",
+    "- [Hugging Face transformers](#toc5__)    \n",
+    "  - [Hugging Face: FinancialBERT for Sentiment Analysis](#toc5_1__)    \n",
+    "    - [Initialize the ValidMind dataset](#toc5_1_1__)    \n",
+    "    - [Initialize the ValidMind model](#toc5_1_2__)    \n",
+    "    - [Run model validation tests](#toc5_1_3__)    \n",
+    "- [Next steps](#toc6__)    \n",
+    "- [Upgrade ValidMind](#toc7__)    \n",
+    "\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=2\n",
+    "\tmaxLevel=4\n",
+    "\t/jn-toc-notebook-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc1__'></a>\n",
+    "\n",
     "## About ValidMind\n",
     "\n",
     "ValidMind's suite of tools enables organizations to identify, document, and manage model risks for all types of models, including AI/ML models, LLMs, and statistical models. As a model developer, you use the ValidMind Library to automate documentation and validation tests, and then use the ValidMind Platform to collaborate on documentation initiatives. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
@@ -22,27 +60,40 @@
     "If this is your first time trying out ValidMind, we recommend going through the following resources first:\n",
     "\n",
     "- [Get started](https://docs.validmind.ai/get-started/get-started.html) — The basics, including key concepts, and how our products work\n",
-    "- [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html) — The path for developers, more code samples, and our developer reference\n"
+    "- [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html) — The path for developers, more code samples, and our developer reference"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc2__'></a>\n",
+    "\n",
     "## Before you begin\n",
     "\n",
     "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>For access to all features available in this notebook, you'll need access to a ValidMind account.</b></span>\n",
     "<br></br>\n",
     "<a href=\"https://docs.validmind.ai/guide/configuration/register-with-validmind.html\" style=\"color: #DE257E;\"><b>Register with ValidMind</b></a></div>\n",
     "\n",
-    "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n"
+    "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install the ValidMind Library\n",
+    "<a id='toc3__'></a>\n",
+    "\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc3_1__'></a>\n",
+    "\n",
+    "### Install the ValidMind Library\n",
     "\n",
     "To install the library:"
    ]
@@ -60,28 +111,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize the ValidMind Library\n",
+    "<a id='toc3_2__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc3_2_1__'></a>\n",
     "\n",
-    "### Get your code snippet\n",
+    "#### Register sample model\n",
+    "\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Analytics`\n",
     "\n",
-    "   - Documentation template: `NLP-based Text Classification`\n",
-    "   - Use case: `Marketing/Sales - Analytics`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc3_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `NLP-based Text Classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc3_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -111,11 +197,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc3_3__'></a>\n",
+    "\n",
     "### Preview the documentation template\n",
     "\n",
-    "A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model.\n",
     "\n",
-    "You will upload documentation and test results into this template later on. For now, take a look at the structure that the template provides with the `vm.preview_template()` function from the ValidMind library and note the empty sections:\n"
+    "You will upload documentation and test results unique to your model based on this template later on. For now, **take a look at the default structure that the template provides with [the `vm.preview_template()` function](https://docs.validmind.ai/validmind/validmind.html#preview_template)** from the ValidMind library and note the empty sections:"
    ]
   },
   {
@@ -131,11 +219,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc3_4__'></a>\n",
+    "\n",
     "### Get your sample dataset ready for analysis\n",
     "\n",
     "To perform the sentiment analysis for financial news we're going to load a local copy of this dataset: https://www.kaggle.com/datasets/ankurzing/sentiment-analysis-for-financial-news.\n",
     "\n",
-    "This dataset contains two columns, `Sentiment` and `Sentence`. The sentiment can be `negative`, `neutral` or `positive`.\n"
+    "This dataset contains two columns, `Sentiment` and `Sentence`. The sentiment can be `negative`, `neutral` or `positive`."
    ]
   },
   {
@@ -153,9 +243,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4__'></a>\n",
+    "\n",
     "## NLP data quality tests\n",
     "\n",
-    "Before we proceed with the analysis, it's crucial to ensure the quality of our NLP data. We can run the \"data preparation\" section of the template to validate the raw dataset's integrity and suitability.\n"
+    "Before we proceed with the analysis, it's crucial to ensure the quality of our NLP data. We can run the \"data preparation\" section of the template to validate the raw dataset's integrity and suitability."
    ]
   },
   {
@@ -180,17 +272,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hugging Face transformers\n"
+    "<a id='toc5__'></a>\n",
+    "\n",
+    "## Hugging Face transformers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc5_1__'></a>\n",
+    "\n",
     "### Hugging Face: FinancialBERT for Sentiment Analysis\n",
     "\n",
     "Let's now explore integrating and testing FinancialBERT (https://huggingface.co/ahmedrachid/FinancialBERT-Sentiment-Analysis\n",
-    "), a model designed specifically for sentiment analysis in the financial domain:\n"
+    "), a model designed specifically for sentiment analysis in the financial domain:"
    ]
   },
   {
@@ -215,7 +311,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Initialize the ValidMind dataset\n"
+    "<a id='toc5_1_1__'></a>\n",
+    "\n",
+    "#### Initialize the ValidMind dataset"
    ]
   },
   {
@@ -237,9 +335,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc5_1_2__'></a>\n",
+    "\n",
     "#### Initialize the ValidMind model\n",
     "\n",
-    "When initializing a ValidMind model, we pre-calculate predictions on the test dataset. This operation can take a long time for large datasets.\n"
+    "When initializing a ValidMind model, we pre-calculate predictions on the test dataset. This operation can take a long time for large datasets."
    ]
   },
   {
@@ -260,9 +360,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc5_1_3__'></a>\n",
+    "\n",
     "#### Run model validation tests\n",
     "\n",
-    "It's possible to run a subset of tests on the documentation template by passing a `section` parameter to `run_documentation_tests()`. Let's run the tests that correspond to model validation only:\n"
+    "It's possible to run a subset of tests on the documentation template by passing a `section` parameter to `run_documentation_tests()`. Let's run the tests that correspond to model validation only:"
    ]
   },
   {
@@ -284,6 +386,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc6__'></a>\n",
+    "\n",
     "## Next steps\n",
     "\n",
     "You can look at the results of this test suite right in the notebook where you ran the code, as you would expect. But there is a better way: view the prompt validation test results as part of your model documentation in the ValidMind Platform:\n",
@@ -294,13 +398,15 @@
     "\n",
     "What you can see now is a more easily consumable version of the prompt validation testing you just performed, along with other parts of your model documentation that still need to be completed.\n",
     "\n",
-    "If you want to learn more about where you are in the model documentation process, take a look our documentation on the [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html).\n"
+    "If you want to learn more about where you are in the model documentation process, take a look our documentation on the [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc7__'></a>\n",
+    "\n",
     "## Upgrade ValidMind\n",
     "\n",
     "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\">After installing ValidMind, you’ll want to periodically make sure you are on the latest version to access any new features and other enhancements.</div>\n",
