--- a/site/notebooks/code_samples/nlp_and_llm/llm_summarization_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/llm_summarization_demo.ipynb
@@ -19,6 +19,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "::: {.content-hidden when-format=\"html\"}\n",
+    "## Contents    \n",
+    "- [Use case](#toc1__)    \n",
+    "- [About ValidMind](#toc2__)    \n",
+    "- [Before you begin](#toc3__)    \n",
+    "- [Setting up](#toc4__)    \n",
+    "  - [Install the ValidMind Library](#toc4_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc4_2__)    \n",
+    "    - [Register sample model](#toc4_2_1__)    \n",
+    "    - [Apply documentation template](#toc4_2_2__)    \n",
+    "    - [Get your code snippet](#toc4_2_3__)    \n",
+    "  - [Initialize the Python environment](#toc4_3__)    \n",
+    "  - [Preview the documentation template](#toc4_4__)    \n",
+    "- [Load the sample dataset](#toc5__)    \n",
+    "- [Document the model](#toc6__)    \n",
+    "  - [Setup the Large Language Model (LLM)](#toc6_1__)    \n",
+    "  - [Setup up the Prompt](#toc6_2__)    \n",
+    "  - [Initialize the ValidMind datasets](#toc6_3__)    \n",
+    "  - [Assign predictions to the datasets](#toc6_4__)    \n",
+    "  - [Data validation](#toc6_5__)    \n",
+    "  - [Prompt Validation](#toc6_6__)    \n",
+    "  - [Model Validation](#toc6_7__)    \n",
+    "    - [Run model performance tests](#toc6_7_1__)    \n",
+    "    - [Run bias and toxicity tests](#toc6_7_2__)    \n",
+    "- [Next steps](#toc7__)    \n",
+    "- [Upgrade ValidMind](#toc8__)    \n",
+    "\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=2\n",
+    "\tmaxLevel=4\n",
+    "\t/jn-toc-notebook-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc1__'></a>\n",
+    "\n",
     "## Use case\n",
     "\n",
     "The purpose of this notebook is to showcase how to document an automated news summarization system using a Large Language Model (LLM). This AI system leverages a large language model (LLM) to process and condense web-based news articles into concise summaries. \n",
@@ -38,6 +82,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc2__'></a>\n",
+    "\n",
     "## About ValidMind\n",
     "\n",
     "ValidMind's suite of tools enables organizations to identify, document, and manage model risks for all types of models, including AI/ML models, LLMs, and statistical models. As a model developer, you use the ValidMind Library to automate documentation and validation tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
@@ -45,13 +91,15 @@
     "If this is your first time trying out ValidMind, you can make use of the following resources alongside this notebook:\n",
     "\n",
     "- [Get started](https://docs.validmind.ai/get-started/get-started.html) — The basics, including key concepts, and how our products work\n",
-    "- [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html) — The path for developers, more code samples, and our developer reference\n"
+    "- [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html) — The path for developers, more code samples, and our developer reference"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc3__'></a>\n",
+    "\n",
     "## Before you begin\n",
     "\n",
     "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>For access to all features available in this notebook, you'll need access to a ValidMind account.</b></span>\n",
@@ -65,7 +113,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Install the ValidMind Library\n",
+    "<a id='toc4__'></a>\n",
+    "\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc4_1__'></a>\n",
+    "\n",
+    "### Install the ValidMind Library\n",
     "\n",
     "To install the library:"
    ]
@@ -83,28 +142,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize the ValidMind Library\n",
+    "<a id='toc4_2__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc4_2_1__'></a>\n",
     "\n",
-    "### Get your code snippet\n",
+    "#### Register sample model\n",
+    "\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Sales/Prospecting`\n",
     "\n",
-    "   - Documentation template: `LLM-based Text Summarization`\n",
-    "   - Use case: `Marketing/Sales - Sales/Prospecting`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc4_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `LLM-based Text Summarization`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc4_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -134,7 +228,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialize the Python environment\n",
+    "<a id='toc4_3__'></a>\n",
+    "\n",
+    "### Initialize the Python environment\n",
     "\n",
     "Next, let's import the necessary libraries and set up your Python environment for data analysis:"
    ]
@@ -154,11 +250,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc4_4__'></a>\n",
+    "\n",
     "### Preview the documentation template\n",
     "\n",
-    "A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model.\n",
     "\n",
-    "You will upload documentation and test results into this template later on. For now, take a look at the structure that the template provides with the `vm.preview_template()` function from the ValidMind library and note the empty sections:\n"
+    "You will upload documentation and test results unique to your model based on this template later on. For now, **take a look at the default structure that the template provides with [the `vm.preview_template()` function](https://docs.validmind.ai/validmind/validmind.html#preview_template)** from the ValidMind library and note the empty sections:"
    ]
   },
   {
@@ -174,6 +272,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc5__'></a>\n",
+    "\n",
     "## Load the sample dataset\n",
     "\n",
     "The sample dataset used here is provided by the ValidMind library. To be able to use it, you need to import the dataset and load it into a pandas [DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html), a two-dimensional tabular data structure that makes use of rows and columns:"
@@ -205,6 +305,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc6__'></a>\n",
+    "\n",
     "## Document the model\n",
     "\n",
     "As part of documenting the model with the ValidMind Library, you need to preprocess the raw dataset, initialize some training and test datasets, initialize a model object you can use for testing, and then run the full suite of tests."
@@ -214,6 +316,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc6_1__'></a>\n",
+    "\n",
     "### Setup the Large Language Model (LLM)\n",
     "\n",
     "This section prepares our environment to use OpenAI's Large Language Model by setting up the API key and defining a function to call the model."
@@ -267,6 +371,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc6_2__'></a>\n",
+    "\n",
     "### Setup up the Prompt\n",
     "\n",
     "In this section, we construct a structured prompt template designed to guide the AI in summarizing the CNN Daily news. The template emphasizes the AI's role as an expert in parsing and condensing news information. It instructs the AI to focus on the article's core content, avoiding assumptions or external data."
@@ -300,6 +406,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc6_3__'></a>\n",
+    "\n",
     "### Initialize the ValidMind datasets\n",
     "\n",
     "Before you can run tests, you must first initialize a ValidMind dataset object using the [`init_dataset`](https://docs.validmind.ai/validmind/validmind.html#init_dataset) function from the ValidMind (`vm`) module.\n",
@@ -344,6 +452,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc6_4__'></a>\n",
+    "\n",
     "### Assign predictions to the datasets\n",
     "\n",
     "We can now use the assign_predictions() method from the Dataset object to link existing predictions to any model. If no prediction values are passed, the method will compute predictions automatically:"
@@ -365,6 +475,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc6_5__'></a>\n",
+    "\n",
     "### Data validation\n",
     "\n",
     "This section focuses on performing a series of data description tests to gain insights into the basic characteristics of our text data. The goal of data description in this use case is verifying that the data meets certain standards and criteria before it is used for text summarization tasks. We conduct the follwoing NLP data quality tests:\n",
@@ -377,7 +489,7 @@
     "- *Language Detection*: Verify the language of the dataset to ensure it is consistent.\n",
     "- *Toxicity*: Evaluate the presence of toxic language in the dataset.\n",
     "- *Polarity and Subjectivity*: Measure the sentiment of the dataset to understand the overall tone.\n",
-    "- *Sentiment*: Analyze the sentiment of the dataset to determine the overall mood.\n"
+    "- *Sentiment*: Analyze the sentiment of the dataset to determine the overall mood."
    ]
   },
   {
@@ -522,6 +634,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc6_6__'></a>\n",
+    "\n",
     "### Prompt Validation\n",
     "\n",
     "This section conducts a critical analysis of prompts to ensure their effectiveness when interacting with AI models. It involves systematic checks across several dimensions to enhance the quality of the interaction between the user and the AI:\n",
@@ -634,6 +748,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc6_7__'></a>\n",
+    "\n",
     "### Model Validation\n",
     "\n",
     "This section is dedicated to the assessment of the AI model's understanding and processing of language data. It involves running various model performance tests, ensuring the model's output is as expected and reliable."
@@ -643,6 +759,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc6_7_1__'></a>\n",
+    "\n",
     "#### Run model performance tests\n",
     "\n",
     "Here we measure the model's linguistic performance across various metrics, including:\n",
@@ -758,6 +876,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc6_7_2__'></a>\n",
+    "\n",
     "#### Run bias and toxicity tests\n",
     "\n",
     "The focus of this subsection is on identifying any potential bias or toxicity in the model's language processing. We conduct:\n",
@@ -804,6 +924,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc7__'></a>\n",
+    "\n",
     "## Next steps\n",
     "\n",
     "You can look at the results of this test suite right in the notebook where you ran the code, as you would expect. But there is a better way: view the prompt validation test results as part of your model documentation right in the ValidMind Platform:\n",
@@ -821,6 +943,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='toc8__'></a>\n",
+    "\n",
     "## Upgrade ValidMind\n",
     "\n",
     "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\">After installing ValidMind, you’ll want to periodically make sure you are on the latest version to access any new features and other enhancements.</div>\n",
