--- a/site/notebooks/code_samples/nlp_and_llm/prompt_validation_demo.ipynb
+++ b/site/notebooks/code_samples/nlp_and_llm/prompt_validation_demo.ipynb
@@ -15,30 +15,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Contents\n",
-    "- [About ValidMind](#toc1_)    \n",
-    "  - [Before you begin](#toc1_1_)    \n",
-    "  - [New to ValidMind?](#toc1_2_)    \n",
-    "  - [Key concepts](#toc1_3_)    \n",
-    "- [Install the ValidMind Library](#toc2_)    \n",
-    "- [Initialize the ValidMind Library](#toc3_)    \n",
-    "  - [Get your code snippet](#toc3_1_)    \n",
-    "  - [Preview the documentation template](#toc3_2_)    \n",
-    "  - [Get ready to run the analysis](#toc3_3_)    \n",
-    "  - [Get your sample dataset ready for analysis](#toc3_4_)    \n",
-    "- [Perform the prompt validation](#toc4_)    \n",
-    "- [Next steps](#toc5_)    \n",
-    "  - [Work with your model documentation](#toc5_1_)    \n",
-    "  - [Discover more learning resources](#toc5_2_) \n",
-    "- [Upgrade ValidMind](#toc6_)   \n",
+    "::: {.content-hidden when-format=\"html\"}\n",
+    "## Contents    \n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
+    "  - [Preview the documentation template](#toc2_3__)    \n",
+    "- [Get ready to run the analysis](#toc3__)    \n",
+    "- [Get your sample dataset ready for analysis](#toc4__)    \n",
+    "- [Perform the prompt validation](#toc5__)    \n",
+    "- [Next steps](#toc6__)    \n",
+    "  - [Work with your model documentation](#toc6_1__)    \n",
+    "  - [Discover more learning resources](#toc6_2__)    \n",
+    "- [Upgrade ValidMind](#toc7__)    \n",
     "\n",
-    "<!-- vscode-jupyter-toc-config\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
     "\tanchor=true\n",
     "\tflat=false\n",
     "\tminLevel=2\n",
     "\tmaxLevel=4\n",
-    "\t/vscode-jupyter-toc-config -->\n",
+    "\t/jn-toc-notebook-config -->\n",
     "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
@@ -46,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
@@ -54,7 +59,7 @@
     "\n",
     "You use the ValidMind Library to automate documentation and validation tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
     "\n",
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -62,7 +67,7 @@
     "\n",
     "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n",
     "\n",
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -72,7 +77,7 @@
     "<br></br>\n",
     "<a href=\"https://docs.validmind.ai/guide/configuration/register-with-validmind.html\" style=\"color: #DE257E;\"><b>Register with ValidMind</b></a></div>\n",
     "\n",
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -97,18 +102,27 @@
     "\n",
     "**Test suites**: Collections of tests designed to run together to automate and generate model documentation end-to-end for specific use-cases.\n",
     "\n",
-    "Example: the [`classifier_full_suite`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html#ClassifierFullSuite) test suite runs tests from the [`tabular_dataset`](https://docs.validmind.ai/validmind/validmind/test_suites/tabular_datasets.html) and [`classifier`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html) test suites to fully document the data and model sections for binary classification model use-cases.\n"
+    "Example: the [`classifier_full_suite`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html#ClassifierFullSuite) test suite runs tests from the [`tabular_dataset`](https://docs.validmind.ai/validmind/validmind/test_suites/tabular_datasets.html) and [`classifier`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html) test suites to fully document the data and model sections for binary classification model use-cases."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
-    "## Install the ValidMind Library\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_1__'></a>\n",
     "\n",
-    "To install the library:\n"
+    "### Install the ValidMind Library\n",
+    "\n",
+    "To install the library:"
    ]
   },
   {
@@ -124,32 +138,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
-    "## Initialize the ValidMind Library\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "#### Register sample model\n",
     "\n",
-    "<a id='toc3_1_'></a>\n",
-    "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Analytics`\n",
     "\n",
-    "   - Documentation template: `LLM-based Text Classification`\n",
-    "   - Use case: `Marketing/Sales - Analytics`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:\n"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `LLM-based Text Classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -179,13 +224,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_2_'></a>\n",
+    "<a id='toc2_3__'></a>\n",
     "\n",
     "### Preview the documentation template\n",
     "\n",
-    "A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model.\n",
     "\n",
-    "You will upload documentation and test results into this template later on. For now, take a look at the structure that the template provides with the `vm.preview_template()` function from the ValidMind library and note the empty sections:\n"
+    "You will upload documentation and test results unique to your model based on this template later on. For now, **take a look at the default structure that the template provides with [the `vm.preview_template()` function](https://docs.validmind.ai/validmind/validmind.html#preview_template)** from the ValidMind library and note the empty sections:"
    ]
   },
   {
@@ -201,11 +246,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_3_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
-    "### Get ready to run the analysis\n",
+    "## Get ready to run the analysis\n",
     "\n",
-    "Import the ValidMind `FoundationModel` and `Prompt` classes needed for the sentiment analysis later on:\n"
+    "Import the ValidMind `FoundationModel` and `Prompt` classes needed for the sentiment analysis later on:"
    ]
   },
   {
@@ -221,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check your access to the OpenAI API:\n"
+    "Check your access to the OpenAI API:"
    ]
   },
   {
@@ -268,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set the prompt guidelines for the sentiment analysis:\n"
+    "Set the prompt guidelines for the sentiment analysis:"
    ]
   },
   {
@@ -300,13 +345,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_4_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
-    "### Get your sample dataset ready for analysis\n",
+    "## Get your sample dataset ready for analysis\n",
     "\n",
     "To perform the sentiment analysis for financial news we're going to load a local copy of this dataset: https://www.kaggle.com/datasets/ankurzing/sentiment-analysis-for-financial-news.\n",
     "\n",
-    "This dataset contains two columns, `Sentiment` and `Sentence`. The sentiment can be `negative`, `neutral` or `positive`.\n"
+    "This dataset contains two columns, `Sentiment` and `Sentence`. The sentiment can be `negative`, `neutral` or `positive`."
    ]
   },
   {
@@ -327,11 +372,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Perform the prompt validation\n",
     "\n",
-    "First, use the ValidMind Library to initialize the dataset and model objects necessary for documentation. The ValidMind `predict_fn` function allows the model to be tested and evaluated in a standardized manner:\n"
+    "First, use the ValidMind Library to initialize the dataset and model objects necessary for documentation. The ValidMind `predict_fn` function allows the model to be tested and evaluated in a standardized manner:"
    ]
   },
   {
@@ -368,7 +413,7 @@
    "source": [
     "Next, use the ValidMind Library to run validation tests on the model. These tests evaluate various aspects of the prompts, including bias, clarity, conciseness, delimitation, negative instruction, and specificity.\n",
     "\n",
-    "Each test is explained in detail, highlighting its purpose, test mechanism, and the importance of the specific aspect being evaluated. The tests are graded on a scale from 1 to 10, with a predetermined threshold, and the explanations for each test include a score, threshold, and a pass/fail determination.\n"
+    "Each test is explained in detail, highlighting its purpose, test mechanism, and the importance of the specific aspect being evaluated. The tests are graded on a scale from 1 to 10, with a predetermined threshold, and the explanations for each test include a score, threshold, and a pass/fail determination."
    ]
   },
   {
@@ -392,20 +437,20 @@
    "source": [
     "Here, most of the tests pass but the test for _conciseness_ needs further attention, as it fails the threshold. This test is designed to evaluate the brevity and succinctness of prompts provided to a large language model (LLM).\n",
     "\n",
-    "The test matters, because a concise prompt strikes a balance between offering clear instructions and eliminating redundant or unnecessary information, ensuring that the LLM receives relevant input without being overwhelmed.\n"
+    "The test matters, because a concise prompt strikes a balance between offering clear instructions and eliminating redundant or unnecessary information, ensuring that the LLM receives relevant input without being overwhelmed."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
     "You can look at the results of this test suite right in the notebook where you ran the code, as you would expect. But there is a better way — use the ValidMind Platform to work with your model documentation.\n",
     "\n",
-    "<a id='toc5_1_'></a>\n",
+    "<a id='toc6_1__'></a>\n",
     "\n",
     "### Work with your model documentation\n",
     "\n",
@@ -415,7 +460,7 @@
     "\n",
     "What you see is the full draft of your model documentation in a more easily consumable version. From here, you can make qualitative edits to model documentation, view guidelines, collaborate with validators, and submit your model documentation for approval when it's ready. [Learn more ...](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html)\n",
     "\n",
-    "<a id='toc5_2_'></a>\n",
+    "<a id='toc6_2__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -431,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
