--- a/site/notebooks/code_samples/ongoing_monitoring/quickstart_customer_churn_ongoing_monitoring.ipynb
+++ b/site/notebooks/code_samples/ongoing_monitoring/quickstart_customer_churn_ongoing_monitoring.ipynb
@@ -17,36 +17,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "::: {.content-hidden when-format=\"html\"}\n",
     "## Contents    \n",
-    "- [About ValidMind](#toc1_)    \n",
-    "  - [Before you begin](#toc1_1_)    \n",
-    "  - [New to ValidMind?](#toc1_2_)    \n",
-    "  - [Key concepts](#toc1_3_)    \n",
-    "- [Install the ValidMind Library](#toc2_)    \n",
-    "- [Initialize the ValidMind Library](#toc3_)    \n",
-    "  - [Get your code snippet](#toc3_1_)   \n",
-    "- [Initialize the Python environment](#toc4_)    \n",
-    "  - [Preview the monitoring template](#toc4_1_)    \n",
-    "- [Load the reference and monitoring datasets](#toc5_)    \n",
-    "  - [Load the production model](#toc5_1_)    \n",
-    "  - [Initialize the ValidMind datasets](#toc5_2_)    \n",
-    "  - [Initialize a model object](#toc5_3_)    \n",
-    "  - [Assign predictions to the datasets](#toc5_4_)    \n",
-    "  - [Run the ongoing monitoring tests](#toc5_5_)    \n",
-    "  - [Conduct target and feature drift testing](#toc5_6_)    \n",
-    "    - [Feature drift tests](#toc5_6_1_)    \n",
-    "  - [Model performance monitoring tests](#toc5_7_)    \n",
-    "- [Next steps](#toc6_)    \n",
-    "  - [Discover more learning resources](#toc6_1_)\n",
-    "- [Upgrade ValidMind](#toc7_)    \n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
+    "  - [Initialize the Python environment](#toc2_3__)    \n",
+    "  - [Preview the monitoring template](#toc2_4__)    \n",
+    "- [Load the reference and monitoring datasets](#toc3__)    \n",
+    "  - [Load the production model](#toc3_1__)    \n",
+    "  - [Initialize the ValidMind datasets](#toc3_2__)    \n",
+    "  - [Initialize a model object](#toc3_3__)    \n",
+    "  - [Assign predictions to the datasets](#toc3_4__)    \n",
+    "  - [Run the ongoing monitoring tests](#toc3_5__)    \n",
+    "  - [Conduct target and feature drift testing](#toc3_6__)    \n",
+    "    - [Feature drift tests](#toc3_6_1__)    \n",
+    "  - [Model performance monitoring tests](#toc3_7__)    \n",
+    "- [Next steps](#toc4__)    \n",
+    "  - [Discover more learning resources](#toc4_1__)    \n",
+    "- [Upgrade ValidMind](#toc5__)    \n",
     "\n",
-    "<!-- vscode-jupyter-toc-config\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
     "\tanchor=true\n",
     "\tflat=false\n",
     "\tminLevel=2\n",
     "\tmaxLevel=4\n",
-    "\t/vscode-jupyter-toc-config -->\n",
+    "\t/jn-toc-notebook-config -->\n",
     "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
@@ -54,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
@@ -62,7 +67,7 @@
     "\n",
     "You use the ValidMind Library to automate documentation, validation, monitoring tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
     "\n",
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -70,7 +75,7 @@
     "\n",
     "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n",
     "\n",
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -80,7 +85,7 @@
     "<br></br>\n",
     "<a href=\"https://docs.validmind.ai/guide/configuration/register-with-validmind.html\" style=\"color: #DE257E;\"><b>Register with ValidMind</b></a></div>\n",
     "\n",
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -112,11 +117,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
-    "## Install the ValidMind Library\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_1__'></a>\n",
     "\n",
-    "To install the library:\n"
+    "### Install the ValidMind Library\n",
+    "\n",
+    "To install the library:"
    ]
   },
   {
@@ -132,32 +146,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
-    "## Initialize the ValidMind Library\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "#### Register sample model\n",
     "\n",
-    "<a id='toc3_1_'></a>\n",
-    "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
     "\n",
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -188,11 +233,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc2_3__'></a>\n",
     "\n",
-    "## Initialize the Python environment\n",
+    "### Initialize the Python environment\n",
     "\n",
-    "Next, let's import the necessary libraries and set up your Python environment for data analysis:\n"
+    "Next, let's import the necessary libraries and set up your Python environment for data analysis:"
    ]
   },
   {
@@ -216,13 +261,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_1_'></a>\n",
+    "<a id='toc2_4__'></a>\n",
     "\n",
     "### Preview the monitoring template\n",
     "\n",
     "A template predefines sections for your model monitoring documentation and provides a general outline to follow, making the documentation process much easier.\n",
     "\n",
-    "You will upload documentation and test results into this template later on. For now, take a look at the structure that the template provides with the `vm.preview_template()` function from the ValidMind library and note the empty sections:\n"
+    "You will upload documentation and test results into this template later on. For now, take a look at the structure that the template provides with the `vm.preview_template()` function from the ValidMind library and note the empty sections:"
    ]
   },
   {
@@ -238,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## Load the reference and monitoring datasets\n",
     "\n",
@@ -262,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_1_'></a>\n",
+    "<a id='toc3_1__'></a>\n",
     "\n",
     "### Load the production model\n",
     "\n",
@@ -286,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_2_'></a>\n",
+    "<a id='toc3_2__'></a>\n",
     "\n",
     "### Initialize the ValidMind datasets\n",
     "\n",
@@ -299,7 +344,7 @@
     "- `target_column` — A required argument if tests require access to true values. This is the name of the target column in the dataset.\n",
     "- `class_labels` — An optional value to map predicted classes to class labels.\n",
     "\n",
-    "With all datasets ready, you can now initialize training, reference(test) and monitor datasets (`train_df`, `reference_df` and `monitor_df`) created earlier into their own dataset objects using [`vm.init_dataset()`](https://docs.validmind.ai/validmind/validmind.html#init_dataset):\n"
+    "With all datasets ready, you can now initialize training, reference(test) and monitor datasets (`train_df`, `reference_df` and `monitor_df`) created earlier into their own dataset objects using [`vm.init_dataset()`](https://docs.validmind.ai/validmind/validmind.html#init_dataset):"
    ]
   },
   {
@@ -331,11 +376,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_3_'></a>\n",
+    "<a id='toc3_3__'></a>\n",
     "\n",
     "### Initialize a model object\n",
     "\n",
-    "Additionally, you'll need to initialize a ValidMind model object (`vm_model`) that can be passed to other functions for analysis and tests on the data. You simply intialize this model object with [`vm.init_model()`](https://docs.validmind.ai/validmind/validmind.html#init_model):\n"
+    "Additionally, you'll need to initialize a ValidMind model object (`vm_model`) that can be passed to other functions for analysis and tests on the data. You simply intialize this model object with [`vm.init_model()`](https://docs.validmind.ai/validmind/validmind.html#init_model):"
    ]
   },
   {
@@ -354,11 +399,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_4_'></a>\n",
+    "<a id='toc3_4__'></a>\n",
     "\n",
     "### Assign predictions to the datasets\n",
     "\n",
-    "We can now use the `assign_predictions()` method from the Dataset object to link existing predictions to any model. If no prediction values are passed, the method will compute predictions automatically:\n"
+    "We can now use the `assign_predictions()` method from the Dataset object to link existing predictions to any model. If no prediction values are passed, the method will compute predictions automatically:"
    ]
   },
   {
@@ -384,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_5_'></a>\n",
+    "<a id='toc3_5__'></a>\n",
     "\n",
     "### Run the ongoing monitoring tests\n",
     "\n",
@@ -406,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's run the first test in the list. Note that you can use `vm.tests.describe_test()` to get information about the inputs required for the test:\n"
+    "Let's run the first test in the list. Note that you can use `vm.tests.describe_test()` to get information about the inputs required for the test:"
    ]
   },
   {
@@ -441,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's run the tests needed to determine data quality of the monitoring dataset:\n"
+    "Let's run the tests needed to determine data quality of the monitoring dataset:"
    ]
   },
   {
@@ -519,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_6_'></a>\n",
+    "<a id='toc3_6__'></a>\n",
     "\n",
     "### Conduct target and feature drift testing\n",
     "\n",
@@ -626,7 +671,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally for target drift, let's plot each prediction value and feature grid side by side.\n"
+    "Finally for target drift, let's plot each prediction value and feature grid side by side."
    ]
   },
   {
@@ -649,7 +694,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_6_1_'></a>\n",
+    "<a id='toc3_6_1__'></a>\n",
     "\n",
     "#### Feature drift tests\n",
     "\n",
@@ -676,7 +721,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_7_'></a>\n",
+    "<a id='toc3_7__'></a>\n",
     "\n",
     "### Model performance monitoring tests\n",
     "\n",
@@ -737,7 +782,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
@@ -748,7 +793,7 @@
     "\n",
     "What you see is the full draft of your model monitoring documentation in a more easily consumable version. From here, you can make qualitative edits to model monitoring documentation, view guidelines, collaborate with validators, and submit your model monitoring documentation for approval when it's ready.\n",
     "\n",
-    "<a id='toc6_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -764,7 +809,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
