--- a/site/notebooks/how_to/document_multiple_results_for_the_same_test.ipynb
+++ b/site/notebooks/how_to/document_multiple_results_for_the_same_test.ipynb
@@ -18,43 +18,48 @@
     "\n",
     "- Initializing the ValidMind Library\n",
     "- Loading a sample dataset provided by the library to train a simple classification model\n",
-    "- Running a ValidMind test suite to quickly generate documentation about the data and model\n"
+    "- Running a ValidMind test suite to quickly generate documentation about the data and model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Contents\n",
-    "- [About ValidMind](#toc1_)    \n",
-    "  - [Before you begin](#toc1_1_)    \n",
-    "  - [New to ValidMind?](#toc1_2_)    \n",
-    "  - [Key concepts](#toc1_3_)    \n",
-    "- [Install the ValidMind Library](#toc2_)    \n",
-    "- [Initialize the ValidMind Library](#toc3_)    \n",
-    "  - [Get your code snippet](#toc3_1_)    \n",
-    "- [Update the customer churn demo template](#toc4_)    \n",
-    "- [Initialize the Python environment](#toc5_)    \n",
-    "  - [Preview the documentation template](#toc5_1_)    \n",
-    "- [Load the sample dataset](#toc6_)    \n",
-    "  - [Initialize a ValidMind dataset object](#toc6_1_)    \n",
-    "- [Document the model](#toc7_)    \n",
-    "  - [Prepare datasets](#toc7_1_)    \n",
-    "  - [Initialize the training and test datasets](#toc7_2_)    \n",
-    "  - [Run documentation tests](#toc7_3_)    \n",
-    "  - [Run the individual tests using the `run_test`](#toc7_4_)    \n",
-    "- [Next steps](#toc8_)    \n",
-    "  - [Work with your model documentation](#toc8_1_)    \n",
-    "  - [Discover more learning resources](#toc8_2_)   \n",
-    "- [Upgrade ValidMind](#toc9_) \n",
+    "::: {.content-hidden when-format=\"html\"}\n",
+    "## Contents    \n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
+    "- [Update the customer churn demo template](#toc3__)    \n",
+    "- [Initialize the Python environment](#toc4__)    \n",
+    "  - [Preview the documentation template](#toc4_1__)    \n",
+    "- [Load the sample dataset](#toc5__)    \n",
+    "  - [Initialize a ValidMind dataset object](#toc5_1__)    \n",
+    "- [Document the model](#toc6__)    \n",
+    "  - [Prepare datasets](#toc6_1__)    \n",
+    "  - [Initialize the training and test datasets](#toc6_2__)    \n",
+    "  - [Run documentation tests](#toc6_3__)    \n",
+    "  - [Run the individual tests using the `run_test`](#toc6_4__)    \n",
+    "- [Next steps](#toc7__)    \n",
+    "  - [Work with your model documentation](#toc7_1__)    \n",
+    "  - [Discover more learning resources](#toc7_2__)    \n",
+    "- [Upgrade ValidMind](#toc8__)    \n",
     "\n",
-    "<!-- vscode-jupyter-toc-config\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
     "\tanchor=true\n",
     "\tflat=false\n",
     "\tminLevel=2\n",
     "\tmaxLevel=4\n",
-    "\t/vscode-jupyter-toc-config -->\n",
+    "\t/jn-toc-notebook-config -->\n",
     "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
@@ -62,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
@@ -70,7 +75,7 @@
     "\n",
     "You use the ValidMind Library to automate documentation and validation tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
     "\n",
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -78,7 +83,7 @@
     "\n",
     "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n",
     "\n",
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -88,7 +93,7 @@
     "<br></br>\n",
     "<a href=\"https://docs.validmind.ai/guide/configuration/register-with-validmind.html\" style=\"color: #DE257E;\"><b>Register with ValidMind</b></a></div>\n",
     "\n",
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -113,16 +118,25 @@
     "\n",
     "**Test suites**: Collections of tests designed to run together to automate and generate model documentation end-to-end for specific use-cases.\n",
     "\n",
-    "Example: the [`classifier_full_suite`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html#ClassifierFullSuite) test suite runs tests from the [`tabular_dataset`](https://docs.validmind.ai/validmind/validmind/test_suites/tabular_datasets.html) and [`classifier`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html) test suites to fully document the data and model sections for binary classification model use-cases.\n"
+    "Example: the [`classifier_full_suite`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html#ClassifierFullSuite) test suite runs tests from the [`tabular_dataset`](https://docs.validmind.ai/validmind/validmind/test_suites/tabular_datasets.html) and [`classifier`](https://docs.validmind.ai/validmind/validmind/test_suites/classifier.html) test suites to fully document the data and model sections for binary classification model use-cases."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
-    "## Install the ValidMind Library\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_1__'></a>\n",
+    "\n",
+    "### Install the ValidMind Library\n",
     "\n",
     "To install the library:"
    ]
@@ -140,32 +154,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
-    "## Initialize the ValidMind Library\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "#### Register sample model\n",
     "\n",
-    "<a id='toc3_1_'></a>\n",
-    "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
     "\n",
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:\n"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -195,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## Update the customer churn demo template\n",
     "\n",
@@ -224,18 +269,18 @@
     "- Click on **Prepare new version**, provide some version notes and click on **Save new version** to save a new version of this template.\n",
     "- Next, we need to swap our model documentation to use this new version of the template. Follow the steps on [Swap documentation templates](https://docs.validmind.ai/guide/model-documentation/swap-documentation-templates.html) to swap the template of our customer churn model.\n",
     "\n",
-    "In the following sections we provide more context on how these `content_id` fields mentioned earlier get mapped to the actual tests.\n"
+    "In the following sections we provide more context on how these `content_id` fields mentioned earlier get mapped to the actual tests."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Initialize the Python environment\n",
     "\n",
-    "Next, let's import the necessary libraries and set up your Python environment for data analysis:\n"
+    "Next, let's import the necessary libraries and set up your Python environment for data analysis:"
    ]
   },
   {
@@ -257,13 +302,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Preview the documentation template\n",
     "\n",
-    "A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model.\n",
     "\n",
-    "You will upload documentation and test results into this template later on. For now, take a look at the structure that the template provides with the `vm.preview_template()` function from the ValidMind library and note the empty sections. You will see two blocks with different result IDs for skewness.\n"
+    "You will upload documentation and test results unique to your model based on this template later on. For now, **take a look at the default structure that the template provides with [the `vm.preview_template()` function](https://docs.validmind.ai/validmind/validmind.html#preview_template)** from the ValidMind library and note the empty sections:"
    ]
   },
   {
@@ -279,13 +324,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Load the sample dataset\n",
     "\n",
     "The sample dataset used here is provided by the ValidMind library, along with a second, different dataset (`taiwan_credit`) you can try as well.\n",
     "\n",
-    "To be able to use either sample dataset, you need to import the dataset and load it into a pandas [DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html), a two-dimensional tabular data structure that makes use of rows and columns:\n"
+    "To be able to use either sample dataset, you need to import the dataset and load it into a pandas [DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html), a two-dimensional tabular data structure that makes use of rows and columns:"
    ]
   },
   {
@@ -305,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_'></a>\n",
+    "<a id='toc5_1__'></a>\n",
     "\n",
     "### Initialize a ValidMind dataset object\n",
     "\n",
@@ -315,7 +360,7 @@
     "\n",
     "- `dataset` — the raw dataset that you want to analyze\n",
     "- `target_column` — the name of the target column in the dataset\n",
-    "- `class_labels` — the list of class labels used for classification model training\n"
+    "- `class_labels` — the list of class labels used for classification model training"
    ]
   },
   {
@@ -336,22 +381,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Document the model\n",
     "\n",
-    "As part of documenting the model with the ValidMind Library, you need to preprocess the raw dataset, initialize some training and test datasets, initialize a model object you can use for testing, and then run the full suite of tests.\n"
+    "As part of documenting the model with the ValidMind Library, you need to preprocess the raw dataset, initialize some training and test datasets, initialize a model object you can use for testing, and then run the full suite of tests."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_1_'></a>\n",
+    "<a id='toc6_1__'></a>\n",
     "\n",
     "### Prepare datasets\n",
     "\n",
-    "DataFrame (df) preprocessing is simplified by employing `demo_dataset.preprocess` to partition it into distinct datasets (`train_df`, `validation_df`, and `test_df`)\n"
+    "DataFrame (df) preprocessing is simplified by employing `demo_dataset.preprocess` to partition it into distinct datasets (`train_df`, `validation_df`, and `test_df`)"
    ]
   },
   {
@@ -367,11 +412,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_2_'></a>\n",
+    "<a id='toc6_2__'></a>\n",
     "\n",
     "### Initialize the training and test datasets\n",
     "\n",
-    "With the datasets ready, you can now initialize the training and test datasets (`train_df` and `test_df`) created earlier into their own dataset objects using [`vm.init_dataset()`](https://docs.validmind.ai/validmind/validmind.html#init_dataset):\n"
+    "With the datasets ready, you can now initialize the training and test datasets (`train_df` and `test_df`) created earlier into their own dataset objects using [`vm.init_dataset()`](https://docs.validmind.ai/validmind/validmind.html#init_dataset):"
    ]
   },
   {
@@ -393,11 +438,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_3_'></a>\n",
+    "<a id='toc6_3__'></a>\n",
     "\n",
     "### Run documentation tests\n",
     "\n",
-    "Now specify `inputs` and `params` for individual tests using `config` parameter. The results for the both the datasets will be visible in the documentation. The `inputs` in the config get priority over global `inputs` in the `run_documentation_tests`.\n"
+    "Now specify `inputs` and `params` for individual tests using `config` parameter. The results for the both the datasets will be visible in the documentation. The `inputs` in the config get priority over global `inputs` in the `run_documentation_tests`."
    ]
   },
   {
@@ -430,11 +475,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_4_'></a>\n",
+    "<a id='toc6_4__'></a>\n",
     "\n",
     "### Run the individual tests using the `run_test`\n",
     "\n",
-    "Now run the `Skewness` tests for training and test datasets. The results for the both the datasets will be visible in the documentation.\n"
+    "Now run the `Skewness` tests for training and test datasets. The results for the both the datasets will be visible in the documentation."
    ]
   },
   {
@@ -464,13 +509,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
     "You can look at the results of this test suite right in the notebook where you ran the code, as you would expect. But there is a better way — use the ValidMind Platform to work with your model documentation.\n",
     "\n",
-    "<a id='toc8_1_'></a>\n",
+    "<a id='toc7_1__'></a>\n",
     "\n",
     "### Work with your model documentation\n",
     "\n",
@@ -484,7 +529,7 @@
     "\n",
     "From here, you can also make qualitative edits to model documentation, view guidelines, collaborate with validators, and submit your model documentation for approval when it's ready. [Learn more ...](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html)\n",
     "\n",
-    "<a id='toc8_2_'></a>\n",
+    "<a id='toc7_2__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -500,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc9_'></a>\n",
+    "<a id='toc8__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
