--- a/site/notebooks/how_to/log_metrics_over_time.ipynb
+++ b/site/notebooks/how_to/log_metrics_over_time.ipynb
@@ -25,23 +25,29 @@
    "source": [
     "::: {.content-hidden when-format=\"html\"}\n",
     "## Contents    \n",
-    "- [About ValidMind](#toc1_)    \n",
-    "  - [Before you begin](#toc1_1_)    \n",
-    "  - [New to ValidMind?](#toc1_2_)    \n",
-    "  - [Key concepts](#toc1_3_)    \n",
-    "- [Install the ValidMind Library](#toc2_)    \n",
-    "- [Initialize the ValidMind Library](#toc3_)    \n",
-    "  - [Get your code snippet](#toc3_1_)    \n",
-    "- [Initialize the Python environment](#toc4_)    \n",
-    "- [Load demo model](#toc5_)    \n",
-    "- [Log metrics](#toc6_)    \n",
-    "  - [Run unit metrics](#toc6_1_)    \n",
-    "  - [Log unit metrics over time](#toc6_2_)    \n",
-    "  - [Pass thresholds](#toc6_3_)    \n",
-    "  - [Log multiple metrics with custom thresholds](#toc6_4_)    \n",
-    "  - [Add acceptable performance flag](#toc6_5_)\n",
-    "- [Next steps](#toc7_)\n",
-    "- [Upgrade ValidMind](#toc8_)\n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
+    "  - [Initialize the Python environment](#toc2_3__)    \n",
+    "- [Load demo model](#toc3__)    \n",
+    "- [Log metrics](#toc4__)    \n",
+    "  - [Run unit metrics](#toc4_1__)    \n",
+    "  - [Log unit metrics over time](#toc4_2__)    \n",
+    "  - [Pass thresholds](#toc4_3__)    \n",
+    "  - [Log multiple metrics with custom thresholds](#toc4_4__)    \n",
+    "  - [Add acceptable performance flag](#toc4_5__)    \n",
+    "- [Next steps](#toc5__)    \n",
+    "  - [Work with your model documentation](#toc5_1__)    \n",
+    "  - [Discover more learning resources](#toc5_2__)    \n",
+    "- [Upgrade ValidMind](#toc6__)    \n",
+    "\n",
     ":::\n",
     "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
@@ -57,27 +63,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
-    "\n",
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "ValidMind is a suite of tools for managing model risk, including risk associated with AI and statistical models.\n",
     "\n",
     "You use the ValidMind Library to automate documentation and validation tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
     "\n",
-    "<a id='toc1_1_'></a>\n",
-    "\n",
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "This notebook assumes you have basic familiarity with Python, including an understanding of how functions work. If you are new to Python, you can still run the notebook but we recommend further familiarizing yourself with the language.\n",
     "\n",
     "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n",
     "\n",
-    "<a id='toc1_2_'></a>\n",
-    "\n",
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "If you haven't already seen our documentation on the [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html), we recommend you begin by exploring the available resources in this section. There, you can learn more about documenting models and running tests, as well as find code samples and our Python Library API reference.\n",
@@ -91,9 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_3_'></a>\n",
-    "\n",
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -125,11 +123,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
-    "<a id='toc2_'></a>\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_1__'></a>\n",
     "\n",
-    "## Install the ValidMind Library\n",
+    "### Install the ValidMind Library\n",
     "\n",
     "To install the library:"
    ]
@@ -147,36 +152,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
-    "<a id='toc3_'></a>\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "## Initialize the ValidMind Library\n",
+    "#### Register sample model\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
-    "\n",
-    "<a id='toc3_1_'></a>\n",
-    "\n",
-    "<a id='toc3_1_'></a>\n",
-    "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Credit Risk - CECL`\n",
     "\n",
-    "   - Documentation template: `Credit Risk Scorecard`\n",
-    "   - Use case: `Credit Risk - CECL`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Credit Risk Scorecard`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -206,11 +238,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc2_3__'></a>\n",
     "\n",
-    "<a id='toc4_'></a>\n",
-    "\n",
-    "## Initialize the Python environment\n",
+    "### Initialize the Python environment\n",
     "\n",
     "Next, let's import the necessary libraries and set up your Python environment for data analysis:"
    ]
@@ -236,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## Load demo model\n",
     "\n",
@@ -356,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Log metrics\n",
     "\n",
@@ -381,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Run unit metrics\n",
     "\n",
@@ -480,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_2_'></a>\n",
+    "<a id='toc4_2__'></a>\n",
     "\n",
     "### Log unit metrics over time\n",
     "\n",
@@ -525,7 +555,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_3_'></a>\n",
+    "<a id='toc4_3__'></a>\n",
     "\n",
     "### Pass thresholds\n",
     "\n",
@@ -593,7 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_4_'></a>\n",
+    "<a id='toc4_4__'></a>\n",
     "\n",
     "### Log multiple metrics with custom thresholds\n",
     "\n",
@@ -700,7 +730,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_5_'></a>\n",
+    "<a id='toc4_5__'></a>\n",
     "\n",
     "### Add acceptable performance flag\n",
     "\n",
@@ -819,13 +849,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
     "You can look at the results of this test suite right in the notebook where you ran the code, as you would expect. But there is a better way — use the ValidMind Platform to work with your model documentation.\n",
     "\n",
-    "<a id='toc9_1_'></a>\n",
+    "<a id='toc5_1__'></a>\n",
     "\n",
     "### Work with your model documentation\n",
     "\n",
@@ -835,7 +865,7 @@
     "\n",
     "What you see is the full draft of your model documentation in a more easily consumable version. From here, you can make qualitative edits to model documentation, view guidelines, collaborate with validators, and submit your model documentation for approval when it's ready. [Learn more ...](https://docs.validmind.ai/guide/model-documentation/working-with-model-documentation.html)\n",
     "\n",
-    "<a id='toc9_2_'></a>\n",
+    "<a id='toc5_2__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -851,7 +881,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
@@ -890,9 +920,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "validmind-eEL8LtKG-py3.10",
+   "display_name": "ValidMind Library",
    "language": "python",
-   "name": "python3"
+   "name": "validmind"
   },
   "language_info": {
    "codemirror_mode": {
@@ -904,7 +934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
