--- a/site/notebooks/how_to/run_tests/1_run_dataset_based_tests.ipynb
+++ b/site/notebooks/how_to/run_tests/1_run_dataset_based_tests.ipynb
@@ -23,31 +23,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "::: {.content-hidden when-format=\"html\"}\n",
     "## Contents    \n",
-    "- [About ValidMind](#toc1_)    \n",
-    "  - [Before you begin](#toc1_1_)    \n",
-    "  - [New to ValidMind?](#toc1_2_)    \n",
-    "  - [Key concepts](#toc1_3_)    \n",
-    "- [Install the ValidMind Library](#toc2_)    \n",
-    "- [Initialize the ValidMind Library](#toc3_)    \n",
-    "  - [Get your code snippet](#toc3_1_)   \n",
-    "- [List and filter available tests](#toc4_)    \n",
-    "- [Create a sample dataset](#toc5_)    \n",
-    "  - [Initialize a ValidMind dataset](#toc5_1_)    \n",
-    "  - [Run tests with the dataset](#toc5_2_)    \n",
-    "    - [Run a test that accepts parameters](#toc5_2_1_)    \n",
-    "- [Add test results to documentation](#toc6_)    \n",
-    "- [Next steps](#toc7_)    \n",
-    "  - [Discover more learning resources](#toc7_1_)    \n",
-    "- [Upgrade ValidMind](#toc8_)\n",
+    "- [About ValidMind](#toc1__)    \n",
+    "  - [Before you begin](#toc1_1__)    \n",
+    "  - [New to ValidMind?](#toc1_2__)    \n",
+    "  - [Key concepts](#toc1_3__)    \n",
+    "- [Setting up](#toc2__)    \n",
+    "  - [Install the ValidMind Library](#toc2_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc2_2__)    \n",
+    "    - [Register sample model](#toc2_2_1__)    \n",
+    "    - [Apply documentation template](#toc2_2_2__)    \n",
+    "    - [Get your code snippet](#toc2_2_3__)    \n",
+    "- [List and filter available tests](#toc3__)    \n",
+    "- [Create a sample dataset](#toc4__)    \n",
+    "  - [Initialize a ValidMind dataset](#toc4_1__)    \n",
+    "  - [Run tests with the dataset](#toc4_2__)    \n",
+    "    - [Run a test that accepts parameters](#toc4_2_1__)    \n",
+    "- [Add test results to documentation](#toc5__)    \n",
+    "- [Next steps](#toc6__)    \n",
+    "  - [Discover more learning resources](#toc6_1__)    \n",
+    "- [Upgrade ValidMind](#toc7__)    \n",
     "\n",
-    "<!-- vscode-jupyter-toc-config\n",
+    ":::\n",
+    "<!-- jn-toc-notebook-config\n",
     "\tnumbering=false\n",
     "\tanchor=true\n",
     "\tflat=false\n",
     "\tminLevel=2\n",
     "\tmaxLevel=4\n",
-    "\t/vscode-jupyter-toc-config -->\n",
+    "\t/jn-toc-notebook-config -->\n",
     "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
    ]
   },
@@ -55,21 +60,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "ValidMind is a suite of tools for managing model risk, including risk associated with AI and statistical models.\n",
     "\n",
     "You use the ValidMind Library to automate documentation and validation tests, and then use the ValidMind Platform to collaborate on model documentation. Together, these products simplify model risk management, facilitate compliance with regulations and institutional standards, and enhance collaboration between yourself and model validators.\n",
     "\n",
-    "<a id='toc1_1_'></a>\n",
+    "<a id='toc1_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "This notebook assumes you have basic familiarity with Python, including an understanding of how functions work. If you are new to Python, you can still run the notebook but we recommend further familiarizing yourself with the language.\n",
     "\n",
     "If you encounter errors due to missing modules in your Python environment, install the modules with `pip install`, and then re-run the notebook. For more help, refer to [Installing Python Modules](https://docs.python.org/3/installing/index.html).\n",
     "\n",
-    "<a id='toc1_2_'></a>\n",
+    "<a id='toc1_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "If you haven't already seen our documentation on the [ValidMind Library](https://docs.validmind.ai/developer/validmind-library.html), we recommend you begin by exploring the available resources in this section. There, you can learn more about documenting models and running tests, as well as find code samples and our Python Library API reference.\n",
@@ -83,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc1_3_'></a>\n",
+    "<a id='toc1_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -115,9 +120,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
-    "## Install the ValidMind Library\n",
+    "## Setting up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_1__'></a>\n",
+    "\n",
+    "### Install the ValidMind Library\n",
     "\n",
     "To install the library:"
    ]
@@ -135,32 +149,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
-    "## Initialize the ValidMind Library\n",
+    "### Initialize the ValidMind Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_1__'></a>\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "#### Register sample model\n",
     "\n",
-    "<a id='toc3_1_'></a>\n",
-    "\n",
-    "### Get your code snippet\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
-    "2. In the left sidebar, navigate to **Model Inventory** and click **+ Register Model**.\n",
+    "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:\n",
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
     "\n",
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
     "\n",
-    "   You can fill in other options according to your preference.\n",
+    "5. Click **Register Model** to add the model to your inventory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_2__'></a>\n",
     "\n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "#### Apply documentation template\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:\n"
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='toc2_2_3__'></a>\n",
+    "\n",
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -190,13 +235,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## List and filter available tests\n",
     "\n",
     "Before we run a test, let's find a suitable test for this demonstration. Let's assume you want to generate the *pearson correlation matrix* for a dataset. A Pearson correlation matrix is a table that shows the [Pearson correlation coefficients](https://en.wikipedia.org/wiki/Pearson_correlation_coefficient) between several variables. \n",
     "\n",
-    "In the [Explore tests](../explore_tests.ipynb) notebook, we learned how to pass a `filter` to the `list_tests` function. We'll do the same here to find the test ID for the pearson correlation matrix:\n"
+    "In the [Explore tests](../explore_tests.ipynb) notebook, we learned how to pass a `filter` to the `list_tests` function. We'll do the same here to find the test ID for the pearson correlation matrix:"
    ]
   },
   {
@@ -212,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the output, you can see that the test ID for the pearson correlation matrix is `validmind.data_validation.PearsonCorrelationMatrix`. The `describe_test` function gives you more information about the test, including its **Required Inputs**:\n"
+    "From the output, you can see that the test ID for the pearson correlation matrix is `validmind.data_validation.PearsonCorrelationMatrix`. The `describe_test` function gives you more information about the test, including its **Required Inputs**:"
    ]
   },
   {
@@ -229,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since this test requires a dataset, it should throw an error if you were to run it without passing a `dataset` input:\n"
+    "Since this test requires a dataset, it should throw an error if you were to run it without passing a `dataset` input:"
    ]
   },
   {
@@ -248,11 +293,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Create a sample dataset\n",
     "\n",
-    "Now, let's build a sample dataset so you can generate its pearson correlation matrix. The sklearn `make_classification` function can generate a random dataset for testing:\n"
+    "Now, let's build a sample dataset so you can generate its pearson correlation matrix. The sklearn `make_classification` function can generate a random dataset for testing:"
    ]
   },
   {
@@ -282,7 +327,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Initialize a ValidMind dataset\n",
     "\n",
@@ -294,7 +339,7 @@
     "- `input_id`: A unique identifier that allows tracking what inputs are used when running each individual test.\n",
     "- `target_column`: A required argument if tests require access to true values. This is the name of the target column in the dataset.\n",
     "\n",
-    "Below you can see how to initialize a VM dataset for the sample `df` you created previously:\n"
+    "Below you can see how to initialize a VM dataset for the sample `df` you created previously:"
    ]
   },
   {
@@ -314,11 +359,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_2_'></a>\n",
+    "<a id='toc4_2__'></a>\n",
     "\n",
     "### Run tests with the dataset\n",
     "\n",
-    "You can now call `run_test` with the new `vm_dataset` object as input:\n"
+    "You can now call `run_test` with the new `vm_dataset` object as input:"
    ]
   },
   {
@@ -342,7 +387,7 @@
     "- Let's try to find a *class imbalance* to understand the distribution of the target column in the dataset. \n",
     "- Class imbalance is a common problem in machine learning, particularly in classification tasks, where the number of instances (or data points) in each class isn't evenly distributed across the available categories.\n",
     "\n",
-    "We'll use `list_tests` again to showcase how to filter tests for tabular data:\n"
+    "We'll use `list_tests` again to showcase how to filter tests for tabular data:"
    ]
   },
   {
@@ -367,11 +412,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc5_2_1_'></a>\n",
+    "<a id='toc4_2_1__'></a>\n",
     "\n",
     "#### Run a test that accepts parameters\n",
     "\n",
-    "The test ID for the class imbalance test is `validmind.data_validation.ClassImbalance`. If you describe this test you will find that it also accepts some parameters:\n"
+    "The test ID for the class imbalance test is `validmind.data_validation.ClassImbalance`. If you describe this test you will find that it also accepts some parameters:"
    ]
   },
   {
@@ -390,7 +435,7 @@
     "The `min_percent_threshold` will allow you configure the threshold for an acceptable class imbalance. \n",
     "\n",
     "- Let's run the test without any parameters to see its output using a default value for the threshold. \n",
-    "- We also call the `log` method on the result to send the results of the tests to the ValidMind Platform.\n"
+    "- We also call the `log` method on the result to send the results of the tests to the ValidMind Platform."
    ]
   },
   {
@@ -414,7 +459,7 @@
     "This test passes the pass-fail criteria with the default threshold of 10%. \n",
     "\n",
     "- Let's try to run the test with a threshold of 20% to see if it fails. Notice the use of the 'custom_threshold' `result_id` in the test ID. \n",
-    "- This allows you to submit individual results for the same test to the ValidMind Platform, as we'll see in the next section.\n"
+    "- This allows you to submit individual results for the same test to the ValidMind Platform, as we'll see in the next section."
    ]
   },
   {
@@ -436,7 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Add test results to documentation\n",
     "\n",
@@ -458,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
@@ -466,7 +511,7 @@
     "\n",
     "What you see is the full draft of your model documentation in a more easily consumable version. From here, you can make qualitative edits to model documentation, view guidelines, collaborate with validators, and submit your model documentation for approval when it's ready.\n",
     "\n",
-    "<a id='toc7_1_'></a>\n",
+    "<a id='toc6_1__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -484,7 +529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='toc8_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
@@ -523,7 +568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "3.10.13",
    "language": "python",
    "name": "python3"
   },
@@ -537,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
