--- a/site/notebooks/quickstart/quickstart_model_documentation.ipynb
+++ b/site/notebooks/quickstart/quickstart_model_documentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f2c17b2d",
+   "id": "686bdc65",
    "metadata": {},
    "source": [
     "# Quickstart for model documentation\n",
@@ -19,40 +19,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05dce32a",
+   "id": "17e1b850",
    "metadata": {},
    "source": [
     "::: {.content-hidden when-format=\"html\"}\n",
     "## Contents    \n",
-    "- [Introduction](#toc1_)    \n",
-    "- [About ValidMind](#toc2_)    \n",
-    "  - [Before you begin](#toc2_1_)    \n",
-    "  - [New to ValidMind?](#toc2_2_)    \n",
-    "  - [Key concepts](#toc2_3_)    \n",
-    "- [Setting up](#toc3_)    \n",
-    "  - [Install the ValidMind Library](#toc3_1_)    \n",
-    "  - [Initialize the ValidMind Library](#toc3_2_)    \n",
-    "    - [Get your code snippet](#toc3_2_1_)    \n",
-    "  - [Initialize the Python environment](#toc3_3_)    \n",
-    "- [Getting to know ValidMind](#toc4_)    \n",
-    "  - [Preview the documentation template](#toc4_1_)    \n",
-    "  - [View model documentation in the ValidMind Platform](#toc4_2_)    \n",
-    "- [Import the sample dataset](#toc5_)    \n",
-    "- [Preprocessing the raw dataset](#toc6_)    \n",
-    "  - [Split the dataset](#toc6_1_)    \n",
-    "  - [Separate features and targets](#toc6_2_)    \n",
-    "- [Training an XGBoost classifier model](#toc7_)    \n",
-    "  - [Set evaluation metrics](#toc7_1_)    \n",
-    "  - [Fit the model](#toc7_2_)    \n",
-    "- [Initialize the ValidMind datasets](#toc8_)    \n",
-    "- [Initialize a model object](#toc9_)    \n",
-    "  - [Assign predictions](#toc9_1_)    \n",
-    "- [Run the full suite of tests](#toc10_)    \n",
-    "- [In summary](#toc11_)    \n",
-    "- [Next steps](#toc12_)    \n",
-    "  - [Work with your model documentation](#toc12_1_)    \n",
-    "  - [Discover more learning resources](#toc12_2_)    \n",
-    "- [Upgrade ValidMind](#toc13_)    \n",
+    "- [Introduction](#toc1__)    \n",
+    "- [About ValidMind](#toc2__)    \n",
+    "  - [Before you begin](#toc2_1__)    \n",
+    "  - [New to ValidMind?](#toc2_2__)    \n",
+    "  - [Key concepts](#toc2_3__)    \n",
+    "- [Setting up](#toc3__)    \n",
+    "  - [Install the ValidMind Library](#toc3_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc3_2__)    \n",
+    "    - [Register sample model](#toc3_2_1__)    \n",
+    "    - [Apply documentation template](#toc3_2_2__)    \n",
+    "    - [Get your code snippet](#toc3_2_3__)    \n",
+    "  - [Initialize the Python environment](#toc3_3__)    \n",
+    "- [Getting to know ValidMind](#toc4__)    \n",
+    "  - [Preview the documentation template](#toc4_1__)    \n",
+    "  - [View model documentation in the ValidMind Platform](#toc4_2__)    \n",
+    "- [Import the sample dataset](#toc5__)    \n",
+    "- [Preprocessing the raw dataset](#toc6__)    \n",
+    "  - [Split the dataset](#toc6_1__)    \n",
+    "  - [Separate features and targets](#toc6_2__)    \n",
+    "- [Training an XGBoost classifier model](#toc7__)    \n",
+    "  - [Set evaluation metrics](#toc7_1__)    \n",
+    "  - [Fit the model](#toc7_2__)    \n",
+    "- [Initialize the ValidMind datasets](#toc8__)    \n",
+    "- [Initialize a model object](#toc9__)    \n",
+    "  - [Assign predictions](#toc9_1__)    \n",
+    "- [Run the full suite of tests](#toc10__)    \n",
+    "- [In summary](#toc11__)    \n",
+    "- [Next steps](#toc12__)    \n",
+    "  - [Work with your model documentation](#toc12_1__)    \n",
+    "  - [Discover more learning resources](#toc12_2__)    \n",
+    "- [Upgrade ValidMind](#toc13__)    \n",
     "\n",
     ":::\n",
     "<!-- jn-toc-notebook-config\n",
@@ -67,10 +69,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1919918",
+   "id": "16993535",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -84,10 +86,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8f85783",
+   "id": "3b8e33f0",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
@@ -98,10 +100,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87fbc9d8",
+   "id": "24a5e851",
    "metadata": {},
    "source": [
-    "<a id='toc2_1_'></a>\n",
+    "<a id='toc2_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -112,10 +114,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f368277",
+   "id": "87f8ed22",
    "metadata": {},
    "source": [
-    "<a id='toc2_2_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -128,10 +130,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec08fd19",
+   "id": "61497ac2",
    "metadata": {},
    "source": [
-    "<a id='toc2_3_'></a>\n",
+    "<a id='toc2_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -163,20 +165,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8883927",
+   "id": "5c4158bd",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
     "## Setting up"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "57bdd8f8",
+   "id": "fd4a5481",
    "metadata": {},
    "source": [
-    "<a id='toc3_1_'></a>\n",
+    "<a id='toc3_1__'></a>\n",
     "\n",
     "### Install the ValidMind Library\n",
     "\n",
@@ -199,53 +201,69 @@
   },
   {
    "cell_type": "markdown",
-   "id": "797eb7f0",
+   "id": "d32e4d62",
    "metadata": {},
    "source": [
-    "<a id='toc3_2_'></a>\n",
+    "<a id='toc3_2__'></a>\n",
     "\n",
-    "### Initialize the ValidMind Library\n",
-    "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook."
+    "### Initialize the ValidMind Library"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bc5c8bd4",
+   "id": "70757032",
    "metadata": {},
    "source": [
-    "<a id='toc3_2_1_'></a>\n",
+    "<a id='toc3_2_1__'></a>\n",
     "\n",
-    "#### Get your code snippet\n",
+    "#### Register sample model\n",
+    "\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
     "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:"
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
+    "\n",
+    "5. Click **Register Model** to add the model to your inventory."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "74d329e8",
+   "id": "445ac2ce",
    "metadata": {},
    "source": [
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`"
+    "<a id='toc3_2_2__'></a>\n",
+    "\n",
+    "#### Apply documentation template\n",
+    "\n",
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "install-credentials-4c404843-3474-4618-8898-f3bcce33fadd",
+   "id": "c30a58b5",
    "metadata": {},
    "source": [
-    "   You can fill in other options according to your preference.\n",
-    "   \n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "<a id='toc3_2_3__'></a>\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -274,10 +292,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44bf926b",
+   "id": "d1dcb3d0",
    "metadata": {},
    "source": [
-    "<a id='toc3_3_'></a>\n",
+    "<a id='toc3_3__'></a>\n",
     "\n",
     "### Initialize the Python environment\n",
     "\n",
@@ -301,24 +319,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41474c53",
+   "id": "7bbc5e0c",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Getting to know ValidMind"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5d87ae6f",
+   "id": "b07067d5",
    "metadata": {},
    "source": [
-    "<a id='toc4_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Preview the documentation template\n",
     "\n",
-    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model.\n",
     "\n",
     "You will upload documentation and test results unique to your model based on this template later on. For now, **take a look at the default structure that the template provides with [the `vm.preview_template()` function](https://docs.validmind.ai/validmind/validmind.html#preview_template)** from the ValidMind library and note the empty sections:"
    ]
@@ -335,10 +353,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa3b815d",
+   "id": "1336b875",
    "metadata": {},
    "source": [
-    "<a id='toc4_2_'></a>\n",
+    "<a id='toc4_2__'></a>\n",
     "\n",
     "### View model documentation in the ValidMind Platform\n",
     "\n",
@@ -353,10 +371,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bde500ce",
+   "id": "e2281cec",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Import the sample dataset\n",
     "\n",
@@ -387,10 +405,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52d0aaa8",
+   "id": "0aafde18",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## Preprocessing the raw dataset\n",
     "\n",
@@ -399,10 +417,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83545763",
+   "id": "dcd9848d",
    "metadata": {},
    "source": [
-    "<a id='toc6_1_'></a>\n",
+    "<a id='toc6_1__'></a>\n",
     "\n",
     "### Split the dataset\n",
     "\n",
@@ -427,10 +445,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0ae3dc5",
+   "id": "0ed6cb75",
    "metadata": {},
    "source": [
-    "<a id='toc6_2_'></a>\n",
+    "<a id='toc6_2__'></a>\n",
     "\n",
     "### Separate features and targets\n",
     "\n",
@@ -457,10 +475,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "541466ce",
+   "id": "3e1d226e",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Training an XGBoost classifier model\n",
     "\n",
@@ -481,10 +499,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "826d8adf",
+   "id": "d641a3f1",
    "metadata": {},
    "source": [
-    "<a id='toc7_1_'></a>\n",
+    "<a id='toc7_1__'></a>\n",
     "\n",
     "### Set evaluation metrics\n",
     "\n",
@@ -511,10 +529,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78c85786",
+   "id": "ec0de49c",
    "metadata": {},
    "source": [
-    "<a id='toc7_2_'></a>\n",
+    "<a id='toc7_2__'></a>\n",
     "\n",
     "### Fit the model\n",
     "\n",
@@ -541,10 +559,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6662e6b",
+   "id": "833a5047",
    "metadata": {},
    "source": [
-    "<a id='toc8_'></a>\n",
+    "<a id='toc8__'></a>\n",
     "\n",
     "## Initialize the ValidMind datasets\n",
     "\n",
@@ -590,10 +608,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5da79af3",
+   "id": "316ae030",
    "metadata": {},
    "source": [
-    "<a id='toc9_'></a>\n",
+    "<a id='toc9__'></a>\n",
     "\n",
     "## Initialize a model object\n",
     "\n",
@@ -617,10 +635,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fa481bf",
+   "id": "3002517f",
    "metadata": {},
    "source": [
-    "<a id='toc9_1_'></a>\n",
+    "<a id='toc9_1__'></a>\n",
     "\n",
     "### Assign predictions\n",
     "\n",
@@ -650,10 +668,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ade4b3",
+   "id": "123d94f9",
    "metadata": {},
    "source": [
-    "<a id='toc10_'></a>\n",
+    "<a id='toc10__'></a>\n",
     "\n",
     "## Run the full suite of tests\n",
     "\n",
@@ -700,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70830a61",
+   "id": "323c9246",
    "metadata": {},
    "source": [
     "Now we can pass the input configuration to `vm.run_documentation_tests()` and run the full suite of tests.\n",
@@ -720,10 +738,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f1b475",
+   "id": "5235c139",
    "metadata": {},
    "source": [
-    "<a id='toc11_'></a>\n",
+    "<a id='toc11__'></a>\n",
     "\n",
     "## In summary\n",
     "\n",
@@ -735,15 +753,15 @@
     "- [x] Import a sample dataset\n",
     "- [x] Initialize ValidMind datasets and model objects\n",
     "- [x] Assign model predictions to your ValidMind model objects\n",
-    "- [x] Run a full suite of documentation tests\n"
+    "- [x] Run a full suite of documentation tests"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adcc9956",
+   "id": "2c84651a",
    "metadata": {},
    "source": [
-    "<a id='toc12_'></a>\n",
+    "<a id='toc12__'></a>\n",
     "\n",
     "## Next steps\n",
     "\n",
@@ -752,10 +770,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b8e72f6",
+   "id": "946e40b2",
    "metadata": {},
    "source": [
-    "<a id='toc12_1_'></a>\n",
+    "<a id='toc12_1__'></a>\n",
     "\n",
     "### Work with your model documentation\n",
     "\n",
@@ -768,10 +786,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "585b79fd",
+   "id": "0b83397d",
    "metadata": {},
    "source": [
-    "<a id='toc12_2_'></a>\n",
+    "<a id='toc12_2__'></a>\n",
     "\n",
     "### Discover more learning resources\n",
     "\n",
@@ -790,10 +808,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "790f47cb",
+   "id": "9c78dfe5",
    "metadata": {},
    "source": [
-    "<a id='toc13_'></a>\n",
+    "<a id='toc13__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
@@ -814,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "upgrade-version-ab5a531d-4334-4c5b-b6aa-754e336f127f",
+   "id": "f6061b3d",
    "metadata": {},
    "source": [
     "If the version returned is lower than the version indicated in our [production open-source code](https://github.com/validmind/validmind-library/blob/prod/validmind/__version__.py), restart your notebook and run:\n",
@@ -826,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "upgrade-restart-faf9c324-3332-4eaf-aef5-2c0ca650d5ca",
+   "id": "f7216e8c",
    "metadata": {},
    "source": [
     "You may need to restart your kernel after running the upgrade package for changes to be applied."
