--- a/site/notebooks/tutorials/model_development/1-set_up_validmind.ipynb
+++ b/site/notebooks/tutorials/model_development/1-set_up_validmind.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b6fa2ac0",
+   "id": "06993494",
    "metadata": {},
    "source": [
     "# ValidMind for model development 1 — Set up the ValidMind Library\n",
@@ -18,28 +18,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe2e0eca",
+   "id": "5269a388",
    "metadata": {},
    "source": [
     "::: {.content-hidden when-format=\"html\"}\n",
     "## Contents    \n",
-    "- [Introduction](#toc1_)    \n",
-    "- [About ValidMind](#toc2_)    \n",
-    "  - [Before you begin](#toc2_1_)    \n",
-    "  - [New to ValidMind?](#toc2_2_)    \n",
-    "  - [Key concepts](#toc2_3_)    \n",
-    "- [Initializing the ValidMind Library](#toc3_)    \n",
-    "  - [Install the ValidMind Library](#toc3_1_)    \n",
-    "  - [Initialize the ValidMind Library](#toc3_2_)    \n",
-    "    - [Get your code snippet](#toc3_2_1_)    \n",
-    "- [Getting to know ValidMind](#toc4_)    \n",
-    "  - [Preview the documentation template](#toc4_1_)    \n",
-    "    - [View model documentation in the ValidMind Platform](#toc4_1_1_)    \n",
-    "  - [Explore available tests](#toc4_2_)    \n",
-    "- [Upgrade ValidMind](#toc5_)    \n",
-    "- [In summary](#toc6_)    \n",
-    "- [Next steps](#toc7_)    \n",
-    "  - [Start the model development process](#toc7_1_)    \n",
+    "- [Introduction](#toc1__)    \n",
+    "- [About ValidMind](#toc2__)    \n",
+    "  - [Before you begin](#toc2_1__)    \n",
+    "  - [New to ValidMind?](#toc2_2__)    \n",
+    "  - [Key concepts](#toc2_3__)    \n",
+    "- [Setting up](#toc3__)    \n",
+    "  - [Install the ValidMind Library](#toc3_1__)    \n",
+    "  - [Initialize the ValidMind Library](#toc3_2__)    \n",
+    "    - [Register sample model](#toc3_2_1__)    \n",
+    "    - [Apply documentation template](#toc3_2_2__)    \n",
+    "    - [Get your code snippet](#toc3_2_3__)    \n",
+    "- [Getting to know ValidMind](#toc4__)    \n",
+    "  - [Preview the documentation template](#toc4_1__)    \n",
+    "    - [View model documentation in the ValidMind Platform](#toc4_1_1__)    \n",
+    "  - [Explore available tests](#toc4_2__)    \n",
+    "- [Upgrade ValidMind](#toc5__)    \n",
+    "- [In summary](#toc6__)    \n",
+    "- [Next steps](#toc7__)    \n",
+    "  - [Start the model development process](#toc7_1__)    \n",
     "\n",
     ":::\n",
     "<!-- jn-toc-notebook-config\n",
@@ -54,10 +56,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "814da22c",
+   "id": "1020f3fa",
    "metadata": {},
    "source": [
-    "<a id='toc1_'></a>\n",
+    "<a id='toc1__'></a>\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -71,10 +73,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b966a95",
+   "id": "4424a3e8",
    "metadata": {},
    "source": [
-    "<a id='toc2_'></a>\n",
+    "<a id='toc2__'></a>\n",
     "\n",
     "## About ValidMind\n",
     "\n",
@@ -85,10 +87,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87936431",
+   "id": "ed8cfd11",
    "metadata": {},
    "source": [
-    "<a id='toc2_1_'></a>\n",
+    "<a id='toc2_1__'></a>\n",
     "\n",
     "### Before you begin\n",
     "\n",
@@ -99,10 +101,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb9f8dc1",
+   "id": "353613e5",
    "metadata": {},
    "source": [
-    "<a id='toc2_2_'></a>\n",
+    "<a id='toc2_2__'></a>\n",
     "\n",
     "### New to ValidMind?\n",
     "\n",
@@ -115,10 +117,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0d16aca",
+   "id": "63912e66",
    "metadata": {},
    "source": [
-    "<a id='toc2_3_'></a>\n",
+    "<a id='toc2_3__'></a>\n",
     "\n",
     "### Key concepts\n",
     "\n",
@@ -150,21 +152,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "215d62a7",
+   "id": "7d039206",
    "metadata": {},
    "source": [
-    "<a id='toc3_'></a>\n",
+    "<a id='toc3__'></a>\n",
     "\n",
-    "## Initializing the ValidMind Library\n",
-    "\n",
-    "The ValidMind Library provides a rich collection of documentation tools and test suites, from documenting descriptions of datasets to validation and testing of models using a variety of open-source testing frameworks."
+    "## Setting up"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d6758437",
    "metadata": {},
    "source": [
-    "<a id='toc3_1_'></a>\n",
+    "<a id='toc3_1__'></a>\n",
     "\n",
     "### Install the ValidMind Library\n",
     "\n",
@@ -187,52 +188,71 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e37f9fe",
+   "id": "02f8b26f",
    "metadata": {},
    "source": [
-    "<a id='toc3_2_'></a>\n",
+    "<a id='toc3_2__'></a>\n",
     "\n",
     "### Initialize the ValidMind Library\n",
     "\n",
-    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook."
+    "The ValidMind Library provides a rich collection of documentation tools and test suites, from documenting descriptions of datasets to validation and testing of models using a variety of open-source testing frameworks."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "706a1004",
    "metadata": {},
    "source": [
-    "<a id='toc3_2_1_'></a>\n",
+    "<a id='toc3_2_1__'></a>\n",
     "\n",
-    "#### Get your code snippet\n",
+    "#### Register sample model\n",
+    "\n",
+    "Let's first register a sample model for use with this notebook:\n",
     "\n",
     "1. In a browser, [log in to ValidMind](https://docs.validmind.ai/guide/configuration/log-in-to-validmind.html).\n",
     "\n",
     "2. In the left sidebar, navigate to **Inventory** and click **+ Register Model**.\n",
     "\n",
-    "3. Enter the model details and click **Continue**. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
+    "3. Enter the model details and click **Next >** to continue to assignment of model stakeholders. ([Need more help?](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html))\n",
     "\n",
-    "   For example, to register a model for use with this notebook, select:"
+    "   For example, to register a model for use with this notebook, select the following use case: `Marketing/Sales - Attrition/Churn Management`\n",
+    "\n",
+    "4. Select your own name under the **MODEL OWNER** drop-down.\n",
+    "\n",
+    "5. Click **Register Model** to add the model to your inventory."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "48eb92b3",
+   "id": "8ceb6261",
    "metadata": {},
    "source": [
-    "   - Documentation template: `Binary classification`\n",
-    "   - Use case: `Marketing/Sales - Attrition/Churn Management`"
+    "<a id='toc3_2_2__'></a>\n",
+    "\n",
+    "#### Apply documentation template\n",
+    "\n",
+    "Once you've registered your model, let's select a documentation template. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "\n",
+    "1. In the left sidebar that appears for your model, click **Documents** and select **Documentation**.\n",
+    "\n",
+    "2. Under **TEMPLATE**, select `Binary classification`.\n",
+    "\n",
+    "3. Click **Use Template** to apply the template."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "install-credentials-50e67128-2eb5-470a-aeaf-1c692fd3f847",
+   "id": "acf3e1db",
    "metadata": {},
    "source": [
-    "   You can fill in other options according to your preference.\n",
-    "   \n",
-    "4. Go to **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "<a id='toc3_2_3__'></a>\n",
     "\n",
-    "Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
+    "#### Get your code snippet\n",
+    "\n",
+    "ValidMind generates a unique _code snippet_ for each registered model to connect with your developer environment. You initialize the ValidMind Library with this code snippet, which ensures that your documentation and tests are uploaded to the correct model when you run the notebook.\n",
+    "\n",
+    "1. On the left sidebar that appears for your model, select **Getting Started** and click **Copy snippet to clipboard**.\n",
+    "2. Next, [load your model identifier credentials from an `.env` file](https://docs.validmind.ai/developer/model-documentation/store-credentials-in-env-file.html) or replace the placeholder with your own code snippet:"
    ]
   },
   {
@@ -261,23 +281,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99cf2df8",
+   "id": "3e0596f8",
    "metadata": {},
    "source": [
-    "<a id='toc4_'></a>\n",
+    "<a id='toc4__'></a>\n",
     "\n",
     "## Getting to know ValidMind"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "bcd77028",
    "metadata": {},
    "source": [
-    "<a id='toc4_1_'></a>\n",
+    "<a id='toc4_1__'></a>\n",
     "\n",
     "### Preview the documentation template\n",
     "\n",
-    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model. A template predefines sections for your model documentation and provides a general outline to follow, making the documentation process much easier.\n",
+    "Let's verify that you have connected the ValidMind Library to the ValidMind Platform and that the appropriate *template* is selected for your model.\n",
     "\n",
     "You will upload documentation and test results unique to your model based on this template later on. For now, **take a look at the default structure that the template provides with [the `vm.preview_template()` function](https://docs.validmind.ai/validmind/validmind.html#preview_template)** from the ValidMind library and note the empty sections:"
    ]
@@ -294,10 +315,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf63d701",
+   "id": "025a518c",
    "metadata": {},
    "source": [
-    "<a id='toc4_1_1_'></a>\n",
+    "<a id='toc4_1_1__'></a>\n",
     "\n",
     "#### View model documentation in the ValidMind Platform\n",
     "\n",
@@ -312,9 +333,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "596d6d16",
    "metadata": {},
    "source": [
-    "<a id='toc4_2_'></a>\n",
+    "<a id='toc4_2__'></a>\n",
     "\n",
     "### Explore available tests\n",
     "\n",
@@ -335,9 +357,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "30c4a1bc",
    "metadata": {},
    "source": [
-    "<a id='toc5_'></a>\n",
+    "<a id='toc5__'></a>\n",
     "\n",
     "## Upgrade ValidMind\n",
     "\n",
@@ -358,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "540efef8",
+   "id": "e27b286f",
    "metadata": {},
    "source": [
     "If the version returned is lower than the version indicated in our [production open-source code](https://github.com/validmind/validmind-library/blob/prod/validmind/__version__.py), restart your notebook and run:\n",
@@ -370,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b8aa1cc",
+   "id": "75bf527b",
    "metadata": {},
    "source": [
     "You may need to restart your kernel after running the upgrade package for changes to be applied."
@@ -378,10 +401,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65ece5fb",
+   "id": "b919c3a0",
    "metadata": {},
    "source": [
-    "<a id='toc6_'></a>\n",
+    "<a id='toc6__'></a>\n",
     "\n",
     "## In summary\n",
     "\n",
@@ -395,19 +418,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a262f940",
+   "id": "e9c62e9d",
    "metadata": {},
    "source": [
-    "<a id='toc7_'></a>\n",
+    "<a id='toc7__'></a>\n",
     "\n",
     "## Next steps"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "8f1a7063",
    "metadata": {},
    "source": [
-    "<a id='toc7_1_'></a>\n",
+    "<a id='toc7_1__'></a>\n",
     "\n",
     "### Start the model development process\n",
     "\n",
